Fix Testcases in linux xelatex tests

--- a/src/Test/XeLatex/TestFiles/LinuxExpected/BRTag.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/BRTag.tex
@@ -22,79 +22,75 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\xitemte="Charis SIL" at 10pt
-\font\xitemhi="Charis SIL" at 10pt
-\font\xitemxitemcomplexformformbefore="Charis SIL/B":color=000000 at 9pt
-\font\xitemxitemcomplexformrefsbefore="Charis SIL" at 12pt
-\font\xitemxitemdefinitionbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitementryrefcomponentbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitementryreftypebefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemexamplebefore="Charis SIL/I":color=000000 at 8pt
-\font\xitemxitemexamplesbefore="Charis SIL" at 12pt
-\font\xitemxitemheadwordbefore="Charis SIL/B":color=000000 at 8pt
-\font\xitemxitemLexEntrypublishStemComponentTargetHeadWordRefbefore="Charis SIL/B" at 9pt
-\font\xitemxitemLexEntryTypepublishStemComplexFormTypeReverseAbbrPubbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemLexEntryTypepublishStemEntryTypeAbbreviationPubbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemLexSensepublishStemGlossPubLdbefore="Charis SIL" at 10pt
-\font\xitemxitemLexSensepublishStemGlossPubLebefore="Charis SIL" at 10pt
-\font\xitemxitempartofspeechbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitempictureLabelbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemprimaryrefsbefore="Charis SIL" at 12pt
-\font\xitemxitempronunciationbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitempronunciationsbefore="Charis SIL" at 12pt
-\font\sensesensesensesbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemtranslationbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemtranslationLdbefore="Charis SIL" at 10pt
-\font\xitemxitemcrossrefbefore="Charis SIL/B":color=000000 at 9pt
-\font\xitemxitemcrossreftargetsbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemcrossreftypebefore="Charis SIL/BI":color=000000 at 9pt
-\font\xitemxitemheadwordminorbefore="Charis SIL/B":color=000000 at 8pt
-\font\xitemxitemmainentryrefbefore="Charis SIL/B":color=000000 at 9pt
-\font\xitemxitemmainentryrefminorbefore="Charis SIL/B":color=000000 at 9pt
-\font\xitemxitempronunciationminorbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemsensecrossrefbefore="Charis SIL/B":color=000000 at 9pt
-\font\xitemxitemsensemainentryrefbefore="Charis SIL/B":color=000000 at 9pt
-\font\xitemxitemheadwordsubbefore="Charis SIL/B":color=000000 at 8pt
-\font\xitemxitemLexEntrypublishRootMinorPrimaryTargetMLHeadWordPubbefore="Charis SIL/B":color=000000 at 8pt
-\font\xitemxitemLexEntrypublishStemMinorPrimaryTargetMLHeadWordPubbefore="Charis SIL/B":color=000000 at 8pt
-\font\xitemtpi="Charis SIL" at 12pt
-\font\letHeaddicBody="Charis SIL/B":color=000000 at 14pt
-\font\letterletHeaddicBody="Charis SIL/B":color=000000 at 14pt
-\font\letDatadicBody="Charis SIL" at 9pt
-\font\entryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\headwordggoTeluINentryletDatadicBody="Charis SIL/B":color=000000 at 8pt
-\font\headwordafterentryletDatadicBody="Charis SIL/B":color=000000 at 8pt
-\font\spanenheadwordggoTeluINentryletDatadicBody="Charis SIL/B":color=000000 at 9pt
-\font\spanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\pronunciationggofonipaxemicspanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\spanenpronunciationggofonipaxemicspanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\spanggofonipaxemicpronunciationggofonipaxemicspanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\spanenspanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\sensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\grammaticalinfosensespanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\grammaticalinfoaftersensespanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\partofspeechengrammaticalinfosensespanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\spanenpartofspeechengrammaticalinfosensespanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\spanengrammaticalinfosensespanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\definitionensensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\spanendefinitionensensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\LexSensepublishStemGlossPubLdtesensespanentryletDatadicBody="Charis SIL":color=000000 at 10pt
-\font\spanteLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\spanenLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\spansensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\exampleggoTeluINspansensespanentryletDatadicBody="Charis SIL/I":color=000000 at 8pt
-\font\examplebeforespansensespanentryletDatadicBody="Charis SIL/I":color=000000 at 8pt
-\font\exampleafterspansensespanentryletDatadicBody="Charis SIL/I":color=000000 at 8pt
-\font\spanggoTeluINexampleggoTeluINspansensespanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\spanenexampleggoTeluINspansensespanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\spanspansensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\translationLdtespanspansensespanentryletDatadicBody="Charis SIL":color=000000 at 10pt
-\font\spantetranslationLdtespanspansensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\spanentranslationLdtespanspansensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\spanenspansensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
+\font\xitemte="Times New Roman/GR" at 10pt
+\font\xitemhi="Times New Roman/GR" at 10pt
+\font\xitemxitemcomplexformformbefore="Charis SIL/GR/B":color=000000 at 9pt
+\font\xitemxitemcomplexformrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemdefinitionbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitementryrefcomponentbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitementryreftypebefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemexamplebefore="Charis SIL/GR/I":color=000000 at 8pt
+\font\xitemxitemexamplesbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemheadwordbefore="Charis SIL/GR/B":color=000000 at 8pt
+\font\xitemxitemLexEntrypublishStemComponentTargetHeadWordRefbefore="Times New Roman/GR/B" at 9pt
+\font\xitemxitemLexEntryTypepublishStemComplexFormTypeReverseAbbrPubbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemLexEntryTypepublishStemEntryTypeAbbreviationPubbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemLexSensepublishStemGlossPubLdbefore="Times New Roman/GR" at 10pt
+\font\xitemxitemLexSensepublishStemGlossPubLebefore="Times New Roman/GR" at 10pt
+\font\xitemxitempartofspeechbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitempictureLabelbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemprimaryrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitempronunciationbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitempronunciationsbefore="Times New Roman/GR" at 12pt
+\font\sensesensesensesbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemtranslationbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemtranslationLdbefore="Times New Roman/GR" at 10pt
+\font\xitemxitemcrossrefbefore="Charis SIL/GR/B":color=000000 at 9pt
+\font\xitemxitemcrossreftargetsbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemcrossreftypebefore="Charis SIL/GR/BI":color=000000 at 9pt
+\font\xitemxitemheadwordminorbefore="Charis SIL/GR/B":color=000000 at 8pt
+\font\xitemxitemmainentryrefbefore="Charis SIL/GR/B":color=000000 at 9pt
+\font\xitemxitemmainentryrefminorbefore="Charis SIL/GR/B":color=000000 at 9pt
+\font\xitemxitempronunciationminorbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemsensecrossrefbefore="Charis SIL/GR/B":color=000000 at 9pt
+\font\xitemxitemsensemainentryrefbefore="Charis SIL/GR/B":color=000000 at 9pt
+\font\xitemxitemheadwordsubbefore="Charis SIL/GR/B":color=000000 at 8pt
+\font\xitemxitemLexEntrypublishRootMinorPrimaryTargetMLHeadWordPubbefore="Charis SIL/GR/B":color=000000 at 8pt
+\font\xitemxitemLexEntrypublishStemMinorPrimaryTargetMLHeadWordPubbefore="Charis SIL/GR/B":color=000000 at 8pt
+\font\xitemtpi="Times New Roman/GR" at 12pt
+\font\letHeaddicBody="Charis SIL/GR/B":color=000000 at 14pt
+\font\letterletHeaddicBody="Charis SIL/GR/B":color=000000 at 14pt
+\font\letDatadicBody="Times New Roman/GR" at 9pt
+\font\entryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\headwordggoTeluINentryletDatadicBody="Charis SIL/GR/B":color=000000 at 8pt
+\font\spanenheadwordggoTeluINentryletDatadicBody="Times New Roman/GR/B":color=000000 at 9pt
+\font\pronunciationsentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\pronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\spanenpronunciationsentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\sensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\sensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\grammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/I":color=000000 at 9pt
+\font\partofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
+\font\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
+\font\spanengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
+\font\definitionensensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\spanendefinitionensensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\LexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 10pt
+\font\spanteLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\spanenLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\spanensensesentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\examplessensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\exampleggoTeluINexamplessensesensesentryletDatadicBody="Charis SIL/GR/I":color=000000 at 8pt
+\font\spanggoTeluINexampleggoTeluINexamplessensesensesentryletDatadicBody="Charis SIL/GR/I":color=000000 at 9pt
+\font\spanenexampleggoTeluINexamplessensesensesentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
+\font\translationsexamplessensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\translationLdtetranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 10pt
+\font\spantetranslationLdtetranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\spanentranslationLdtetranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\spanenexamplessensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
@@ -104,26 +100,26 @@
 \begin{spacing}{0.916666666666667}\begin{center}\begin{center}\widowpenalty=300
 \clubpenalty=300
 
-\section*{\needspace {8\baselineskip}{\topskip 18pt{\letterletHeaddicBody{అ }}}} \\ \section*{\needspace {8\baselineskip}{\topskip 18pt{\letterletHeaddicBody{అడ్డంవడి}}}}\end{center}
+\section*{\needspace {8\baselineskip}{\topskip 18pt{\letterletHeaddicBody{\underline{అ }}}}} \\ \section*{\needspace {8\baselineskip}{\topskip 18pt{\letterletHeaddicBody{\underline{అడ్డంవడి}}}}}\end{center}
 \end{center}\end{spacing}\setlength{\columnsep}{12pt} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}\begin{spacing}{0.458333333333333}{\raggedright} \begin{spacing}{0.458333333333333}
 \hangindent= 12pt
 \hangafter=1
-\markboth{ \headwordggoTeluINentryletDatadicBody అకుర్పొక్ (మహ్న)}{ \headwordggoTeluINentryletDatadicBody అకుర్పొక్ (మహ్న)}\headwordggoTeluINentryletDatadicBody{అకుర్పొక్ (మహ్న)} \headwordafterentryletDatadicBody{}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicspanentryletDatadicBody{akurpok } \\ \spanggofonipaxemicpronunciationggofonipaxemicspanentryletDatadicBody{(mahna)}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{]} \spanenpartofspeechengrammaticalinfosensespanentryletDatadicBody{n} \grammaticalinfoaftersensespanentryletDatadicBody{}\spanendefinitionensensespanentryletDatadicBody{month 6 of the Gond year (August-September).} \spanteLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody{భాద్రపదం} \end{spacing}
+\markboth{ \headwordggoTeluINentryletDatadicBody అకుర్పొక్ (మహ్న)}{ \headwordggoTeluINentryletDatadicBody అకుర్పొక్ (మహ్న)}\headwordggoTeluINentryletDatadicBody{అకుర్పొక్ (మహ్న)} \headwordggoTeluINentryletDatadicBody{}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{akurpok } \\ \spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{(mahna)}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{]} \spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody{n} \grammaticalinfosensesensesentryletDatadicBody{}\spanendefinitionensensesensesentryletDatadicBody{month 6 of the Gond year (August-September).} \spanteLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody{భాద్రపదం} \end{spacing}
  \\ \begin{spacing}{0.458333333333333}
 \hangindent= 12pt
 \hangafter=1
-\markboth{ \headwordggoTeluINentryletDatadicBody అడ్డంవడి}{ \headwordggoTeluINentryletDatadicBody అడ్డంవడి}\headwordggoTeluINentryletDatadicBody{అడ్డంవడి} \headwordafterentryletDatadicBody{}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicspanentryletDatadicBody{aḍḍanvaḍi}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{]} \spanendefinitionensensespanentryletDatadicBody{air coming across} \spanteLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody{అడ్డంగా వచ్చే గాలి} \examplebeforespansensespanentryletDatadicBody{}\spanggoTeluINexampleggoTeluINspansensespanentryletDatadicBody{నిన్నెతల్ అడ్డంవడి వాసెర్ మంత.} \exampleafterspansensespanentryletDatadicBody{}\spantetranslationLdtespanspansensespanentryletDatadicBody{నిన్నటి నుండి అడ్డంగా గాలి వస్తుంది.} \end{spacing}
+\markboth{ \headwordggoTeluINentryletDatadicBody అడ్డంవడి}{ \headwordggoTeluINentryletDatadicBody అడ్డంవడి}\headwordggoTeluINentryletDatadicBody{అడ్డంవడి} \headwordggoTeluINentryletDatadicBody{}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{aḍḍanvaḍi}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{]} \spanendefinitionensensesensesentryletDatadicBody{air coming across} \spanteLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody{అడ్డంగా వచ్చే గాలి} \exampleggoTeluINexamplessensesensesentryletDatadicBody{}\spanggoTeluINexampleggoTeluINexamplessensesensesentryletDatadicBody{నిన్నెతల్ అడ్డంవడి వాసెర్ మంత.} \exampleggoTeluINexamplessensesensesentryletDatadicBody{}\spantetranslationLdtetranslationsexamplessensesensesentryletDatadicBody{నిన్నటి నుండి అడ్డంగా గాలి వస్తుంది.} \end{spacing}
  \end{spacing}\end{multicols}\begin{spacing}{0.916666666666667}\begin{center}\begin{center}\widowpenalty=300
 \clubpenalty=300
 
-\section*{\needspace {8\baselineskip}{\topskip 18pt{\letterletHeaddicBody{ొ}}}}\end{center}
+\section*{\needspace {8\baselineskip}{\topskip 18pt{\letterletHeaddicBody{\underline{ొ}}}}}\end{center}
 \end{center}\end{spacing}\setlength{\columnsep}{12pt} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}\begin{spacing}{0.458333333333333}{\raggedright} \begin{spacing}{0.458333333333333}
 \hangindent= 12pt
 \hangafter=1
-\markboth{ \headwordggoTeluINentryletDatadicBody -ొర్}{ \headwordggoTeluINentryletDatadicBody -ొర్}\headwordggoTeluINentryletDatadicBody{-ొర్}  \\ \headwordafterentryletDatadicBody{}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicspanentryletDatadicBody{or}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{]} \spanenpartofspeechengrammaticalinfosensespanentryletDatadicBody{vs} \grammaticalinfoaftersensespanentryletDatadicBody{}\spanendefinitionensensespanentryletDatadicBody{3.M.SG} \end{spacing}
+\markboth{ \headwordggoTeluINentryletDatadicBody -ొర్}{ \headwordggoTeluINentryletDatadicBody -ొర్}\headwordggoTeluINentryletDatadicBody{-ొర్}  \\ \headwordggoTeluINentryletDatadicBody{}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{or}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{]} \spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody{vs} \grammaticalinfosensesensesentryletDatadicBody{}\spanendefinitionensensesensesentryletDatadicBody{3.M.SG} \end{spacing}
  \end{spacing}\end{multicols}
 \end{document}
