--- a/src/Test/XeLatex/TestFiles/LinuxExpected/ChapterNumberOnHeader.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/ChapterNumberOnHeader.tex
@@ -21,20 +21,18 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\divzxx="Charis SIL" at 12pt
-\font\spanzxx="Charis SIL" at 12pt
-\font\scrBookscrBody="Charis SIL" at 12pt
-\font\scrBookNamezxxscrBookscrBody="Charis SIL/I":color=400000 at 12pt
-\font\scrBookCodezxxscrBookscrBody="Charis SIL/BI":color=400000 at 12pt
-\font\columnsscrBody="Charis SIL" at 12pt
-\font\scrSectioncolumnsscrBody="Charis SIL" at 12pt
-\font\ParagraphscrSectioncolumnsscrBody="Charis SIL" at 12pt
-\font\ChapterNumberzxxParagraphscrSectioncolumnsscrBody="Charis SIL/B" at 18pt
-\font\VerseNumberzxxParagraphscrSectioncolumnsscrBody="Charis SIL" at 12pt
-\font\spanzxxParagraphscrSectioncolumnsscrBody="Charis SIL" at 12pt
+\font\divzxx="Charis SIL/GR" at 12pt
+\font\spanzxx="Charis SIL/GR" at 12pt
+\font\scrBookscrBody="Charis SIL/GR" at 12pt
+\font\scrBookNamezxxscrBookscrBody="Charis SIL/GR/I":color=400000 at 12pt
+\font\scrBookCodezxxscrBookscrBody="Charis SIL/GR/BI":color=400000 at 12pt
+\font\columnsscrBody="Charis SIL/GR" at 12pt
+\font\scrSectioncolumnsscrBody="Charis SIL/GR" at 12pt
+\font\ParagraphscrSectioncolumnsscrBody="Charis SIL/GR" at 12pt
+\font\ChapterNumberzxxParagraphscrSectioncolumnsscrBody="Charis SIL/GR/B" at 18pt
+\font\VerseNumberzxxParagraphscrSectioncolumnsscrBody="Charis SIL/GR" at 12pt
+\font\spanzxxParagraphscrSectioncolumnsscrBody="Charis SIL/GR" at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
