--- a/src/Test/XeLatex/TestFiles/LinuxExpected/Color.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/Color.tex
@@ -19,12 +19,10 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\t="Charis SIL":color=ff0000 at 12pt
-\font\zt="Charis SIL":color=00FF00 at 12pt
-\font\wzt="Charis SIL":color=123abc at 12pt
+\font\t="Charis SIL/GR":color=ff0000 at 12pt
+\font\zt="Charis SIL/GR":color=00FF00 at 12pt
+\font\wzt="Charis SIL/GR":color=123abc at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
