--- a/src/Test/XeLatex/TestFiles/LinuxExpected/ColumnCount.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/ColumnCount.tex
@@ -20,18 +20,16 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\revHeaderrevAppendix="Charis SIL/B" at 18pt
-\font\letDatarevAppendix="Charis SIL" at 12pt
-\font\entrybletDatarevAppendix="Charis SIL" at 12pt
-\font\revDatarevAppendix="Charis SIL" at 12pt
-\font\revEntryrevDatarevAppendix="Charis SIL" at 10pt
-\font\headwordenrevEntryrevDatarevAppendix="Charis SIL/B" at 11pt
-\font\revSensebssrevEntryrevDatarevAppendix="Charis SIL" at 10pt
-\font\revsensenumberrevSensebssrevEntryrevDatarevAppendix="Charis SIL" at 10pt
-\font\revhomographnumberrevSensebssrevEntryrevDatarevAppendix="Charis SIL" at 10pt
+\font\revHeaderrevAppendix="Charis SIL/GR/B" at 18pt
+\font\letDatarevAppendix="Charis SIL/GR" at 12pt
+\font\entrybletDatarevAppendix="Charis SIL/GR" at 12pt
+\font\revDatarevAppendix="Charis SIL/GR" at 12pt
+\font\revEntryrevDatarevAppendix="Charis SIL/GR" at 10pt
+\font\headwordenrevEntryrevDatarevAppendix="Charis SIL/GR/B" at 11pt
+\font\revSensebssrevEntryrevDatarevAppendix="Charis SIL/GR" at 10pt
+\font\revsensenumberrevSensebssrevEntryrevDatarevAppendix="Charis SIL/GR" at 10pt
+\font\revhomographnumberrevSensebssrevEntryrevDatarevAppendix="Charis SIL/GR" at 10pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
