--- a/src/Test/XeLatex/TestFiles/LinuxExpected/ColumnGap.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/ColumnGap.tex
@@ -20,12 +20,10 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letData="Charis SIL" at 12pt
-\font\xitem="Charis SIL" at 12pt
-\font\letxitem="Charis SIL" at 20pt
+\font\letData="Charis SIL/GR" at 12pt
+\font\xitem="Charis SIL/GR" at 12pt
+\font\letxitem="Charis SIL/GR" at 20pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
