--- a/src/Test/XeLatex/TestFiles/LinuxExpected/Counter1.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/Counter1.tex
@@ -19,19 +19,17 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\sectionletter="Charis SIL" at 12pt
-\font\articlesectionletter="Charis SIL" at 12pt
-\font\sensearticlesectionletter="Charis SIL":color=0000ff at 12pt
-\font\sensebeforearticlesectionletter="Charis SIL":color=ff0000 at 12pt
-\font\firstoftypeheadwordlastoftypesectionletter="Charis SIL" at 12pt
-\font\firstoftypelastoftypepronunciationarticlesectionletter="Charis SIL" at 12pt
-\font\firstoftypelastoftypestressfirstoftypelastoftypepronunciationarticlesectionletter="Charis SIL" at 12pt
-\font\firstoftypegrammarcategorylastoftypesensearticlesectionletter="Charis SIL":color=0000ff at 12pt
-\font\exampleusefirstoftypelastoftypesensearticlesectionletter="Charis SIL":color=0000ff at 12pt
-\font\examplesensearticlesectionletter="Charis SIL":color=0000ff at 12pt
+\font\sectionletter="Charis SIL/GR" at 12pt
+\font\articlesectionletter="Charis SIL/GR" at 12pt
+\font\firstoftypesensearticlesectionletter="Charis SIL/GR":color=ff0000 at 12pt
+\font\firstoftypeheadwordlastoftypesectionletter="Charis SIL/GR" at 12pt
+\font\firstoftypelastoftypepronunciationarticlesectionletter="Charis SIL/GR" at 12pt
+\font\firstoftypelastoftypestressfirstoftypelastoftypepronunciationarticlesectionletter="Charis SIL/GR" at 12pt
+\font\lastoftypesensearticlesectionletter="Charis SIL/GR":color=ff0000 at 12pt
+\font\firstoftypegrammarcategorylastoftypelastoftypesensearticlesectionletter="Charis SIL/GR":color=ff0000 at 12pt
+\font\exampleusefirstoftypelastoftypelastoftypesensearticlesectionletter="Charis SIL/GR":color=ff0000 at 12pt
+\font\examplefirstoftypelastoftypelastoftypesensearticlesectionletter="Charis SIL/GR":color=ff0000 at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
@@ -39,6 +37,6 @@
 \pagenumbering{arabic} 
 \pagestyle{fancy} 
 
-\sensebeforearticlesectionletter{1.2}\sensearticlesectionletter{serving people with food and drink.}\firstoftypeheadwordlastoftypesectionletter{waive}\firstoftypelastoftypepronunciationarticlesectionletter{w}\firstoftypelastoftypestressfirstoftypelastoftypepronunciationarticlesectionletter{eɪ}\firstoftypelastoftypepronunciationarticlesectionletter{v}\sensebeforearticlesectionletter{2.2}\sensearticlesectionletter{2 }\firstoftypegrammarcategorylastoftypesensearticlesectionletter{Verb}\exampleusefirstoftypelastoftypesensearticlesectionletter{V n}\examplesensearticlesectionletter{The art gallery waives admission charges on Sundays.}
+\firstoftypesensearticlesectionletter{1.2}\firstoftypesensearticlesectionletter{serving people with food and drink.}\firstoftypeheadwordlastoftypesectionletter{waive}\firstoftypelastoftypepronunciationarticlesectionletter{w}\firstoftypelastoftypestressfirstoftypelastoftypepronunciationarticlesectionletter{eɪ}\firstoftypelastoftypepronunciationarticlesectionletter{v}\lastoftypesensearticlesectionletter{2.2}\lastoftypesensearticlesectionletter{2 }\firstoftypegrammarcategorylastoftypelastoftypesensearticlesectionletter{Verb}\exampleusefirstoftypelastoftypelastoftypesensearticlesectionletter{V n}\examplefirstoftypelastoftypelastoftypesensearticlesectionletter{The art gallery waives admission charges on Sundays.}
 
 \end{document}
