--- a/src/Test/XeLatex/TestFiles/LinuxExpected/FontBoldItalic.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/FontBoldItalic.tex
@@ -20,30 +20,28 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letHeaddicBody="Charis SIL" at 12pt
-\font\letterboldletHeaddicBody="Charis SIL/B" at 6.6pt
-\font\letterboldletterboldletHeaddicBody="Charis SIL/B" at 6.6pt
-\font\letteritalicletHeaddicBody="Charis SIL/I" at 24pt
-\font\letteritalicletteritalicletHeaddicBody="Charis SIL/I" at 24pt
-\font\letterbolditalicletHeaddicBody="Charis SIL/BI" at 24pt
-\font\letterbolditalicletterbolditalicletHeaddicBody="Charis SIL/BI" at 24pt
-\font\letterbolditalicunderlineletHeaddicBody="Charis SIL/BI" at 24pt
-\font\letterbolditalicunderlineletterbolditalicunderlineletHeaddicBody="Charis SIL/BI" at 24pt
-\font\letternormalletHeaddicBody="Charis SIL" at 24pt
-\font\letternormalletternormalletHeaddicBody="Charis SIL" at 24pt
-\font\letternormalboldletHeaddicBody="Charis SIL/B" at 24pt
-\font\letternormalboldletternormalboldletHeaddicBody="Charis SIL/B" at 24pt
-\font\letternormalitalicletHeaddicBody="Charis SIL/I" at 24pt
-\font\letternormalitalicletternormalitalicletHeaddicBody="Charis SIL/I" at 24pt
-\font\letternormalbolditalicletHeaddicBody="Charis SIL/BI" at 24pt
-\font\letternormalbolditalicletternormalbolditalicletHeaddicBody="Charis SIL/BI" at 24pt
-\font\letternormalunderlineletHeaddicBody="Charis SIL" at 24pt
-\font\letternormalunderlineletternormalunderlineletHeaddicBody="Charis SIL" at 24pt
-\font\letternormalbolditalicunderlineletHeaddicBody="Charis SIL/BI" at 24pt
-\font\letternormalbolditalicunderlineletternormalbolditalicunderlineletHeaddicBody="Charis SIL/BI" at 24pt
+\font\letHeaddicBody="Charis SIL/GR" at 12pt
+\font\letterboldletHeaddicBody="Charis SIL/GR/B" at 6.6pt
+\font\letterboldletterboldletHeaddicBody="Charis SIL/GR/B" at 6.6pt
+\font\letteritalicletHeaddicBody="Charis SIL/GR/I" at 24pt
+\font\letteritalicletteritalicletHeaddicBody="Charis SIL/GR/I" at 24pt
+\font\letterbolditalicletHeaddicBody="Charis SIL/GR/BI" at 24pt
+\font\letterbolditalicletterbolditalicletHeaddicBody="Charis SIL/GR/BI" at 24pt
+\font\letterbolditalicunderlineletHeaddicBody="Charis SIL/GR/BI" at 24pt
+\font\letterbolditalicunderlineletterbolditalicunderlineletHeaddicBody="Charis SIL/GR/BI" at 24pt
+\font\letternormalletHeaddicBody="Charis SIL/GR" at 24pt
+\font\letternormalletternormalletHeaddicBody="Charis SIL/GR" at 24pt
+\font\letternormalboldletHeaddicBody="Charis SIL/GR/B" at 24pt
+\font\letternormalboldletternormalboldletHeaddicBody="Charis SIL/GR/B" at 24pt
+\font\letternormalitalicletHeaddicBody="Charis SIL/GR/I" at 24pt
+\font\letternormalitalicletternormalitalicletHeaddicBody="Charis SIL/GR/I" at 24pt
+\font\letternormalbolditalicletHeaddicBody="Charis SIL/GR/BI" at 24pt
+\font\letternormalbolditalicletternormalbolditalicletHeaddicBody="Charis SIL/GR/BI" at 24pt
+\font\letternormalunderlineletHeaddicBody="Charis SIL/GR" at 24pt
+\font\letternormalunderlineletternormalunderlineletHeaddicBody="Charis SIL/GR" at 24pt
+\font\letternormalbolditalicunderlineletHeaddicBody="Charis SIL/GR/BI" at 24pt
+\font\letternormalbolditalicunderlineletternormalbolditalicunderlineletHeaddicBody="Charis SIL/GR/BI" at 24pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
@@ -57,7 +55,7 @@
 
 \letterbolditalicletterbolditalicletHeaddicBody{A a - bold italic}
 
-\underbar{\letterbolditalicunderlineletterbolditalicunderlineletHeaddicBody{A a - bold italic underline}}
+\letterbolditalicunderlineletterbolditalicunderlineletHeaddicBody{\underline{A a - bold italic underline}}
 
 \letternormalletternormalletHeaddicBody{A a - Normal 24pt}
 
@@ -67,8 +65,8 @@
 
 \letternormalbolditalicletternormalbolditalicletHeaddicBody{A a - Normal bold italic}
 
-\underbar{\letternormalunderlineletternormalunderlineletHeaddicBody{A a - Normal underline}}
+\letternormalunderlineletternormalunderlineletHeaddicBody{\underline{A a - Normal underline}}
 
-\underbar{\letternormalbolditalicunderlineletternormalbolditalicunderlineletHeaddicBody{A a - Normal bold italic underline}}
+\letternormalbolditalicunderlineletternormalbolditalicunderlineletHeaddicBody{\underline{A a - Normal bold italic underline}}
 
 \end{document}
