--- a/src/Test/XeLatex/TestFiles/LinuxExpected/FontFamily5.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/FontFamily5.tex
@@ -19,15 +19,13 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\lettera="Charis SIL/B" at 24pt
-\font\letterb="Charis SIL/B" at 24pt
-\font\letterc="Charis SIL/B" at 24pt
-\font\letterd="Charis SIL/B" at 24pt
-\font\lettere="Charis SIL/B" at 24pt
-\font\letterf="Charis SIL/B" at 24pt
+\font\lettera="Times New Roman/GR/B" at 24pt
+\font\letterb="Charis SIL/GR/B" at 24pt
+\font\letterc="Times New Roman/GR/B" at 24pt
+\font\letterd="Times New Roman/GR/B" at 24pt
+\font\lettere="Charis SIL/GR/B" at 24pt
+\font\letterf="Times New Roman/GR/B" at 24pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
