--- a/src/Test/XeLatex/TestFiles/LinuxExpected/FontStyleNormal.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/FontStyleNormal.tex
@@ -19,12 +19,10 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\normal="Charis SIL" at 24pt
-\font\italicnormal="Charis SIL/I" at 24pt
-\font\normalitalicnormal="Charis SIL" at 24pt
+\font\normal="Times New Roman/GR" at 24pt
+\font\italicnormal="Times New Roman/GR/I" at 24pt
+\font\normalitalicnormal="Times New Roman/GR" at 24pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
