--- a/src/Test/XeLatex/TestFiles/LinuxExpected/FontVariantNormal.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/FontVariantNormal.tex
@@ -19,11 +19,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letter="Charis SIL" at 24pt
-\font\normalletter="Charis SIL" at 24pt
+\font\letter="Charis SIL/GR" at 24pt
+\font\normalletter="Charis SIL/GR" at 24pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
@@ -31,6 +29,6 @@
 \pagenumbering{arabic} 
 \pagestyle{fancy} 
 
-\letter{\textsc{To test the small }}\normalletter{here without smallcaps}\letter{\textsc{ cap feature}}
+\letter{\textsc{To test the small }}\normalletter{\textsc{here without smallcaps}}\letter{\textsc{ cap feature}}
 
 \end{document}
