--- a/src/Test/XeLatex/TestFiles/LinuxExpected/FontWeightBoldRegular.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/FontWeightBoldRegular.tex
@@ -21,33 +21,31 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letHeaddicBody="Charis SIL" at 12pt
-\font\letterletHeaddicBody="Charis SIL/B" at 24pt
-\font\letDatadicBody="Charis SIL" at 12pt
-\font\entryletDatadicBody="Charis SIL" at 10pt
-\font\headwordmcbentryletDatadicBody="Charis SIL/B" at 10pt
-\font\sensesentryletDatadicBody="Charis SIL" at 10pt
-\font\sensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\LexSensepublishStemPossessiveFormsensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\grammaticalinfosensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\partofspeechesgrammaticalinfosensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\spanespartofspeechesgrammaticalinfosensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\subsensessensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\sensesubsensessensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\xsensenumbersensesubsensessensesensesentryletDatadicBody="Charis SIL/B" at 10pt
-\font\grammaticalinfosensesubsensessensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\partofspeechesgrammaticalinfosensesubsensessensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\spanespartofspeechesgrammaticalinfosensesubsensessensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\definitionessensesubsensessensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\spanesdefinitionessensesubsensessensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\LexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\spanesLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\spanmcbLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\EmphasizedTextesLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\FocusedmcbLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Charis SIL" at 10pt
+\font\letHeaddicBody="Charis SIL/GR" at 12pt
+\font\letterletHeaddicBody="Charis SIL/GR/B" at 24pt
+\font\letDatadicBody="Charis SIL/GR" at 12pt
+\font\entryletDatadicBody="Times New Roman/GR" at 10pt
+\font\headwordmcbentryletDatadicBody="Charis SIL/GR/B" at 10pt
+\font\sensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\sensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\LexSensepublishStemPossessiveFormsensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\grammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\partofspeechesgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanespartofspeechesgrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\subsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\sensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\xsensenumbersensesubsensessensesensesentryletDatadicBody="Times New Roman/GR/B" at 10pt
+\font\grammaticalinfosensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\partofspeechesgrammaticalinfosensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanespartofspeechesgrammaticalinfosensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\definitionessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanesdefinitionessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\LexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanesLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanmcbLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\EmphasizedTextesLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\FocusedmcbLexSensepublishStemSocioLinguisticsNotePubessensesubsensessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
