--- a/src/Test/XeLatex/TestFiles/LinuxExpected/GautamiFontTest.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/GautamiFontTest.tex
@@ -22,101 +22,99 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\xitemhi="Charis SIL" at 12pt
-\font\xitemte="Charis SIL" at 12pt
-\font\xitemxitemCmPossibilitypublishStemTransTypeAbbreviationPubbefore="Charis SIL" at 12pt
-\font\xitemxitemcomplexformrefsbefore="Charis SIL" at 12pt
-\font\xitemxitemdefinitionbefore="Charis SIL" at 13pt
-\font\xitemxitemdefinitionLcbefore="Charis SIL" at 12pt
-\font\xitemxitemdefinitionLdbefore="Charis SIL" at 12pt
-\font\xitemxitementryrefcomponentbefore="Charis SIL" at 13pt
-\font\xitemxitementryreftypebefore="Charis SIL" at 13pt
-\font\xitemxitemexamplebefore="Charis SIL/I":color=0000FF at 12pt
-\font\xitemxitemexamplesbefore="Charis SIL" at 12pt
-\font\xitemxitemheadwordbefore="Charis SIL/B" at 13pt
-\font\xitemxitemLexEntrypublishStemComponentTargetHeadWordRefbefore="Charis SIL/B" at 13pt
-\font\xitemxitemLexSensepublishStemDefinitionPubbefore="Charis SIL" at 12pt
-\font\xitemxitemLexSensepublishStemDefinitionPubLdbefore="Charis SIL" at 12pt
-\font\xitemxitemprimaryrefsbefore="Charis SIL" at 12pt
-\font\xitemxitempronunciationbefore="Charis SIL" at 13pt
-\font\xitemxitempronunciationsbefore="Charis SIL" at 12pt
-\font\xitemxitemsemanticdomainsbefore="Charis SIL" at 12pt
-\font\sensesensesensesbefore="Charis SIL" at 13pt
-\font\xitemxitemtranslationbefore="Charis SIL" at 13pt
-\font\xitemxitemtranslationLdbefore="Charis SIL" at 12pt
-\font\xitemxitemcrossrefbefore="Charis SIL" at 13pt
-\font\xitemxitemcrossreftargetsbefore="Charis SIL" at 13pt
-\font\xitemxitemcrossreftypebefore="Charis SIL" at 13pt
-\font\xitemxitemheadwordminorbefore="Charis SIL" at 13pt
-\font\xitemxitemmainentryrefbefore="Charis SIL" at 13pt
-\font\xitemxitemmainentryrefminorbefore="Charis SIL" at 13pt
-\font\xitemxitempronunciationminorbefore="Charis SIL" at 13pt
-\font\xitemxitemsensecrossrefbefore="Charis SIL" at 12pt
-\font\xitemxitemsensemainentryrefbefore="Charis SIL" at 13pt
-\font\letHeaddicBody="Charis SIL" at 16pt
-\font\letterletHeaddicBody="Charis SIL/B" at 16pt
-\font\letDatadicBody="Charis SIL" at 13pt
-\font\entryletDatadicBody="Charis SIL" at 13pt
-\font\headwordggoTeluINentryletDatadicBody="Charis SIL/B" at 13pt
-\font\headwordafterentryletDatadicBody="Charis SIL/B" at 13pt
-\font\spanenheadwordggoTeluINentryletDatadicBody="Charis SIL/B" at 13pt
-\font\spanentryletDatadicBody="Charis SIL" at 13pt
-\font\pronunciationggofonipaxemicspanentryletDatadicBody="Charis SIL" at 13pt
-\font\spanenpronunciationggofonipaxemicspanentryletDatadicBody="Charis SIL" at 13pt
-\font\spanggofonipaxemicpronunciationggofonipaxemicspanentryletDatadicBody="Charis SIL" at 13pt
-\font\spanenspanentryletDatadicBody="Charis SIL" at 13pt
-\font\sensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\grammaticalinfosensespanentryletDatadicBody="Charis SIL/BI":color=800080 at 13pt
-\font\grammaticalinfoaftersensespanentryletDatadicBody="Charis SIL/BI":color=800080 at 13pt
-\font\partofspeechengrammaticalinfosensespanentryletDatadicBody="Charis SIL/BI":color=800080 at 13pt
-\font\spanenpartofspeechengrammaticalinfosensespanentryletDatadicBody="Charis SIL/BI":color=800080 at 13pt
-\font\spanengrammaticalinfosensespanentryletDatadicBody="Charis SIL/BI":color=800080 at 13pt
-\font\definitionensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spanendefinitionensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\LexSensepublishStemDefinitionPubensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spanenLexSensepublishStemDefinitionPubensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\LexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\xitemenLexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spanenxitemenLexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\xitemhiLexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spanhixitemhiLexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\xitemteLexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spantexitemteLexSensepublishStemGlossPubLcensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spansensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\exampleggoTeluINspansensespanentryletDatadicBody="Charis SIL/I":color=0000FF at 12pt
-\font\examplebeforespansensespanentryletDatadicBody="Charis SIL/I":color=0000FF at 12pt
-\font\exampleafterspansensespanentryletDatadicBody="Charis SIL/I":color=0000FF at 12pt
-\font\spanggoTeluINexampleggoTeluINspansensespanentryletDatadicBody="Charis SIL/I":color=0000FF at 13pt
-\font\spanenexampleggoTeluINspansensespanentryletDatadicBody="Charis SIL/I":color=0000FF at 13pt
-\font\spanspansensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spanspanspansensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\CmPossibilitypublishStemTransTypeAbbreviationPubenspanspanspansensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spanenCmPossibilitypublishStemTransTypeAbbreviationPubenspanspanspansensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\CmPossibilitypublishStemTransTypeNamePubenspanspanspansensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spanenCmPossibilitypublishStemTransTypeNamePubenspanspanspansensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spanenspanspanspansensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\translationLdtespanspansensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spantetranslationLdtespanspansensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spanentranslationLdtespanspansensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spanenspansensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\semanticdomainabbrenspansensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spanensemanticdomainabbrenspansensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\semanticdomainnameenspansensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spanensemanticdomainnameenspansensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\definitionLdensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\xitemendefinitionLdensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spanenxitemendefinitionLdensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spanendefinitionLdensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\xitemtedefinitionLdensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spantexitemtedefinitionLdensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\LexSensepublishStemGlossPubLdensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\xitemenLexSensepublishStemGlossPubLdensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spanenxitemenLexSensepublishStemGlossPubLdensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\xitemteLexSensepublishStemGlossPubLdensensespanentryletDatadicBody="Charis SIL" at 13pt
-\font\spantexitemteLexSensepublishStemGlossPubLdensensespanentryletDatadicBody="Charis SIL" at 13pt
+\font\xitemhi="Times New Roman/GR" at 12pt
+\font\xitemte="Times New Roman/GR" at 12pt
+\font\xitemxitemCmPossibilitypublishStemTransTypeAbbreviationPubbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemcomplexformrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemdefinitionbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemdefinitionLcbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemdefinitionLdbefore="Times New Roman/GR" at 12pt
+\font\xitemxitementryrefcomponentbefore="Times New Roman/GR" at 13pt
+\font\xitemxitementryreftypebefore="Times New Roman/GR" at 13pt
+\font\xitemxitemexamplebefore="Times New Roman/GR/I":color=0000FF at 12pt
+\font\xitemxitemexamplesbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemheadwordbefore="Times New Roman/GR/B" at 13pt
+\font\xitemxitemLexEntrypublishStemComponentTargetHeadWordRefbefore="Times New Roman/GR/B" at 13pt
+\font\xitemxitemLexSensepublishStemDefinitionPubbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemLexSensepublishStemDefinitionPubLdbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemprimaryrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitempronunciationbefore="Times New Roman/GR" at 13pt
+\font\xitemxitempronunciationsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemsemanticdomainsbefore="Times New Roman/GR" at 12pt
+\font\sensesensesensesbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemtranslationbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemtranslationLdbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemcrossrefbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemcrossreftargetsbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemcrossreftypebefore="Times New Roman/GR" at 13pt
+\font\xitemxitemheadwordminorbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemmainentryrefbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemmainentryrefminorbefore="Times New Roman/GR" at 13pt
+\font\xitemxitempronunciationminorbefore="Times New Roman/GR" at 13pt
+\font\xitemxitemsensecrossrefbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemsensemainentryrefbefore="Times New Roman/GR" at 13pt
+\font\letHeaddicBody="Times New Roman/GR" at 16pt
+\font\letterletHeaddicBody="Charis SIL/GR/B" at 16pt
+\font\letDatadicBody="Times New Roman/GR" at 13pt
+\font\entryletDatadicBody="Times New Roman/GR" at 13pt
+\font\headwordggoTeluINentryletDatadicBody="Times New Roman/GR/B" at 13pt
+\font\spanenheadwordggoTeluINentryletDatadicBody="Times New Roman/GR/B" at 13pt
+\font\pronunciationsentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\pronunciationggofonipaxemicpronunciationsentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenpronunciationsentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\sensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\sensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\grammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/BI":color=800080 at 13pt
+\font\partofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/BI":color=800080 at 13pt
+\font\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/BI":color=800080 at 13pt
+\font\spanengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/BI":color=800080 at 13pt
+\font\definitionensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanendefinitionensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\LexSensepublishStemDefinitionPubensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenLexSensepublishStemDefinitionPubensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\LexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemenLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenxitemenLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemhiLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanhixitemhiLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemteLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spantexitemteLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\examplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\exampleggoTeluINexamplessensesensesentryletDatadicBody="Times New Roman/GR/I":color=0000FF at 12pt
+\font\spanggoTeluINexampleggoTeluINexamplessensesensesentryletDatadicBody="Times New Roman/GR/I":color=0000FF at 13pt
+\font\spanenexampleggoTeluINexamplessensesensesentryletDatadicBody="Times New Roman/GR/I":color=0000FF at 13pt
+\font\translationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\CmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\CmPossibilitypublishStemTransTypeAbbreviationPubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenCmPossibilitypublishStemTransTypeAbbreviationPubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\CmPossibilitypublishStemTransTypeNamePubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenCmPossibilitypublishStemTransTypeNamePubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\translationLdtetranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spantetranslationLdtetranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanentranslationLdtetranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\semanticdomainssensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanensemanticdomainssensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\semanticdomainabbrensemanticdomainssensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanensemanticdomainabbrensemanticdomainssensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\semanticdomainnameensemanticdomainssensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanensemanticdomainnameensemanticdomainssensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanensensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\definitionLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemendefinitionLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenxitemendefinitionLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanendefinitionLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemtedefinitionLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spantexitemtedefinitionLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\LexSensepublishStemGlossPubLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemenLexSensepublishStemGlossPubLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spanenxitemenLexSensepublishStemGlossPubLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\xitemteLexSensepublishStemGlossPubLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
+\font\spantexitemteLexSensepublishStemGlossPubLdensensesensesentryletDatadicBody="Times New Roman/GR" at 13pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
@@ -124,7 +122,7 @@
 \pagenumbering{arabic} 
 \pagestyle{fancy} 
 \begin{spacing}{0.916666666666667}\begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{అ}}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{\underline{అ}}}}}\end{center}
 \end{spacing}\setlength{\columnsep}{12pt} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}\begin{spacing}{0.458333333333333}{\raggedright} \begin{spacing}{0.458333333333333}
@@ -132,10 +130,11 @@
 \hangafter=1
 \markboth{ \headwordggoTeluINentryletDatadicBody అరిల్
                     బోయిండ}{ \headwordggoTeluINentryletDatadicBody అరిల్
-                    బోయిండ}\headwordggoTeluINentryletDatadicBody{అరిల్ బోయిండ} \headwordafterentryletDatadicBody{}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicspanentryletDatadicBody{aril bōyiṇḍa}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{]} \begin{spacing}{0.5}
+                    బోయిండ}\headwordggoTeluINentryletDatadicBody{అరిల్
+ బోయిండ} \headwordggoTeluINentryletDatadicBody{}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{aril bōyiṇḍa}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{]} \begin{spacing}{0.5}
 
-\spanenpartofspeechengrammaticalinfosensespanentryletDatadicBody{num} \grammaticalinfoaftersensespanentryletDatadicBody{}\spanendefinitionensensespanentryletDatadicBody{ninety-eight.} \spanenLexSensepublishStemDefinitionPubensensespanentryletDatadicBody{ninety-eight.} \spanenxitemenLexSensepublishStemGlossPubLcensensespanentryletDatadicBody{ninety-eight}\spanhixitemhiLexSensepublishStemGlossPubLcensensespanentryletDatadicBody{अट्‌ठानवे}\spantexitemteLexSensepublishStemGlossPubLcensensespanentryletDatadicBody{(98) తొంభై ఎనిమిది}\examplebeforespansensespanentryletDatadicBody{}\spanggoTeluINexampleggoTeluINspansensespanentryletDatadicBody{మా కాలెజ్ నగ అట్యనొవ్ కాండిర్కున్ స్కాలర్ సిప్ కొత్తంగ్ వాతంగ్.} \exampleafterspansensespanentryletDatadicBody{}\spanenCmPossibilitypublishStemTransTypeAbbreviationPubenspanspanspansensespanentryletDatadicBody{FT}\spanenCmPossibilitypublishStemTransTypeNamePubenspanspanspansensespanentryletDatadicBody{[}\spanenCmPossibilitypublishStemTransTypeNamePubenspanspanspansensespanentryletDatadicBody{Free translation}\spanenCmPossibilitypublishStemTransTypeNamePubenspanspanspansensespanentryletDatadicBody{]} \spantetranslationLdtespanspansensespanentryletDatadicBody{మా కాలేజి లొ తొంభై ఎనిమిది మంది పిల్లలకు స్కాలర్ సిప్ డబ్బులు వచ్చినాయి.} \spanenspansensespanentryletDatadicBody{(sem. domains: }\spanensemanticdomainabbrenspansensespanentryletDatadicBody{8.1.1.1}\spanensemanticdomainabbrenspansensespanentryletDatadicBody{ - }\spanensemanticdomainnameenspansensespanentryletDatadicBody{Cardinal numbers}\spanenspansensespanentryletDatadicBody{.) }\end{spacing}
+\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody{num} \grammaticalinfosensesensesentryletDatadicBody{}\spanendefinitionensensesensesentryletDatadicBody{ninety-eight.} \spanenLexSensepublishStemDefinitionPubensensesensesentryletDatadicBody{ninety-eight.} \spanenxitemenLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody{ninety-eight}\spanhixitemhiLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody{अट्‌ठानवे}\spantexitemteLexSensepublishStemGlossPubLcensensesensesentryletDatadicBody{(98) తొంభై ఎనిమిది}\exampleggoTeluINexamplessensesensesentryletDatadicBody{}\spanggoTeluINexampleggoTeluINexamplessensesensesentryletDatadicBody{మా కాలెజ్ నగ అట్యనొవ్ కాండిర్కున్ స్కాలర్ సిప్ కొత్తంగ్ వాతంగ్.} \exampleggoTeluINexamplessensesensesentryletDatadicBody{}\spanenCmPossibilitypublishStemTransTypeAbbreviationPubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody{FT}\spanenCmPossibilitypublishStemTransTypeNamePubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody{[}\spanenCmPossibilitypublishStemTransTypeNamePubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody{Free translation}\spanenCmPossibilitypublishStemTransTypeNamePubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody{]} \spantetranslationLdtetranslationsexamplessensesensesentryletDatadicBody{మా కాలేజి లొ తొంభై ఎనిమిది మంది పిల్లలకు స్కాలర్ సిప్ డబ్బులు వచ్చినాయి.} \spanensemanticdomainssensesensesentryletDatadicBody{(sem. domains: }\spanensemanticdomainabbrensemanticdomainssensesensesentryletDatadicBody{8.1.1.1}\spanensemanticdomainabbrensemanticdomainssensesensesentryletDatadicBody{ - }\spanensemanticdomainnameensemanticdomainssensesensesentryletDatadicBody{Cardinal numbers}\spanensemanticdomainssensesensesentryletDatadicBody{.) }\end{spacing}
 \begin{spacing}{0.5}
-\spanenxitemendefinitionLdensensespanentryletDatadicBody{nipple} \spantexitemtedefinitionLdensensespanentryletDatadicBody{ముచ్చికము} \spanenxitemenLexSensepublishStemGlossPubLdensensespanentryletDatadicBody{nipple}\spantexitemteLexSensepublishStemGlossPubLdensensespanentryletDatadicBody{ముచ్చికము}\examplebeforespansensespanentryletDatadicBody{}\spanggoTeluINexampleggoTeluINspansensespanentryletDatadicBody{వెయ్లొక్ నగ అరిల్ బొయిండంగ్ మందంతంగ్.} \exampleafterspansensespanentryletDatadicBody{}\spanenCmPossibilitypublishStemTransTypeAbbreviationPubenspanspanspansensespanentryletDatadicBody{FT}\spanenCmPossibilitypublishStemTransTypeNamePubenspanspanspansensespanentryletDatadicBody{[}\spanenCmPossibilitypublishStemTransTypeNamePubenspanspanspansensespanentryletDatadicBody{Free translation}\spanenCmPossibilitypublishStemTransTypeNamePubenspanspanspansensespanentryletDatadicBody{]} \spantetranslationLdtespanspansensespanentryletDatadicBody{స్త్రీలకు (పిల్లలు పాలు తాగడానికి) చనులకు ముచ్చికలుంటాయి.} \spanenspansensespanentryletDatadicBody{(sem. domains: }\spanensemanticdomainabbrenspansensespanentryletDatadicBody{2.1.8.4}\spanensemanticdomainabbrenspansensespanentryletDatadicBody{ - }\spanensemanticdomainnameenspansensespanentryletDatadicBody{Female organs}\spanenspansensespanentryletDatadicBody{.) }\end{spacing}
+\spanenxitemendefinitionLdensensesensesentryletDatadicBody{nipple} \spantexitemtedefinitionLdensensesensesentryletDatadicBody{ముచ్చికము} \spanenxitemenLexSensepublishStemGlossPubLdensensesensesentryletDatadicBody{nipple}\spantexitemteLexSensepublishStemGlossPubLdensensesensesentryletDatadicBody{ముచ్చికము}\exampleggoTeluINexamplessensesensesentryletDatadicBody{}\spanggoTeluINexampleggoTeluINexamplessensesensesentryletDatadicBody{వెయ్లొక్ నగ అరిల్ బొయిండంగ్ మందంతంగ్.} \exampleggoTeluINexamplessensesensesentryletDatadicBody{}\spanenCmPossibilitypublishStemTransTypeAbbreviationPubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody{FT}\spanenCmPossibilitypublishStemTransTypeNamePubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody{[}\spanenCmPossibilitypublishStemTransTypeNamePubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody{Free translation}\spanenCmPossibilitypublishStemTransTypeNamePubenCmTranslationpublishStemTypeConfigtranslationsexamplessensesensesentryletDatadicBody{]} \spantetranslationLdtetranslationsexamplessensesensesentryletDatadicBody{స్త్రీలకు (పిల్లలు పాలు తాగడానికి) చనులకు ముచ్చికలుంటాయి.} \spanensemanticdomainssensesensesentryletDatadicBody{(sem. domains: }\spanensemanticdomainabbrensemanticdomainssensesensesentryletDatadicBody{2.1.8.4}\spanensemanticdomainabbrensemanticdomainssensesensesentryletDatadicBody{ - }\spanensemanticdomainnameensemanticdomainssensesensesentryletDatadicBody{Female organs}\spanensemanticdomainssensesensesentryletDatadicBody{.) }\end{spacing}
 \end{spacing} \end{spacing}\end{multicols}
 \end{document}
