--- a/src/Test/XeLatex/TestFiles/LinuxExpected/HashSymbol.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/HashSymbol.tex
@@ -20,42 +20,40 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letHeaddicBody="Charis SIL" at 12pt
-\font\letterletHeaddicBody="Charis SIL/B" at 24pt
-\font\letDatadicBody="Charis SIL" at 12pt
-\font\entryletDatadicBody="Charis SIL" at 10pt
-\font\pictureRightentryletDatadicBody="Charis SIL" at 10pt
-\font\picturepictureRightentryletDatadicBody="Charis SIL" at 10pt
-\font\pictureCaptionpictureRightentryletDatadicBody="Charis SIL" at 10pt
-\font\CmPicturepublishStemPileThumbnailPubpictureCaptionpictureRightentryletDatadicBody="Charis SIL" at 10pt
-\font\pictureLabelenpictureCaptionpictureRightentryletDatadicBody="Charis SIL" at 10pt
-\font\spanenpictureLabelenpictureCaptionpictureRightentryletDatadicBody="Charis SIL" at 10pt
-\font\headwordggoTeluxINentryletDatadicBody="Charis SIL" at 10pt
-\font\pronunciationsentryletDatadicBody="Charis SIL" at 10pt
-\font\pronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL" at 10pt
-\font\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL" at 10pt
-\font\sensesentryletDatadicBody="Charis SIL" at 10pt
-\font\sensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\grammaticalinfosensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\partofspeechengrammaticalinfosensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\xsensenumbersensesentryletDatadicBody="Charis SIL" at 10pt
-\font\definitionensensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\spanendefinitionensensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\LexSensepublishStemGlossPubensensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\spanenLexSensepublishStemGlossPubensensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\examplessensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\exampleggoTeluxINexamplessensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\spanggoTeluxINexampleggoTeluxINexamplessensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\translationsexamplessensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\translationentranslationsexamplessensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\xitementranslationentranslationsexamplessensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\spanenxitementranslationentranslationsexamplessensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\xitemtetranslationentranslationsexamplessensesensesentryletDatadicBody="Charis SIL" at 10pt
-\font\spantexitemtetranslationentranslationsexamplessensesensesentryletDatadicBody="Charis SIL" at 10pt
+\font\letHeaddicBody="Times New Roman/GR" at 12pt
+\font\letterletHeaddicBody="Charis SIL/GR/B" at 24pt
+\font\letDatadicBody="Times New Roman/GR" at 12pt
+\font\entryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\picturepictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\CmPicturepublishStemPileThumbnailPubpictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pictureLabelenpictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanenpictureLabelenpictureCaptionpictureRightentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\headwordggoTeluxINentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pronunciationsentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\pronunciationggofonipaxemicpronunciationsentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\sensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\sensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\grammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\partofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\xsensenumbersensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\definitionensensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanendefinitionensensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\LexSensepublishStemGlossPubensensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanenLexSensepublishStemGlossPubensensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\examplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\exampleggoTeluxINexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanggoTeluxINexampleggoTeluxINexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\translationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\translationentranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\xitementranslationentranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spanenxitementranslationentranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\xitemtetranslationentranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
+\font\spantexitemtetranslationentranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR" at 10pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
@@ -68,12 +66,9 @@
 \hangindent= 36pt
 \hangafter=1
 
-\begin{wrapfigure}
 \begin{center}
 \includegraphics[angle=0,width=150mm,height=175mm]{c.jpg} 
-\caption{}
 \end{center}
-\end{wrapfigure}
 
 
 
