--- a/src/Test/XeLatex/TestFiles/LinuxExpected/ImageBase.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/ImageBase.tex
@@ -19,12 +19,10 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\entrydicBody="Charis SIL" at 12pt
-\font\pictureRightentrydicBody="Charis SIL" at 12pt
-\font\picturepictureRightentrydicBody="Charis SIL" at 12pt
+\font\entrydicBody="Times New Roman/GR" at 12pt
+\font\pictureRightentrydicBody="Times New Roman/GR" at 12pt
+\font\picturepictureRightentrydicBody="Times New Roman/GR" at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
@@ -33,12 +31,9 @@
 \pagestyle{fancy} 
 
 
-\begin{wrapfigure}
 \begin{center}
 \includegraphics[angle=0,width=150mm,height=175mm]{c.jpg} 
-\caption{}
 \end{center}
-\end{wrapfigure}
 
 
 
