--- a/src/Test/XeLatex/TestFiles/LinuxExpected/Lang.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/Lang.tex
@@ -19,14 +19,12 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\xitemen="Charis SIL" at 20pt
-\font\xitempt="Charis SIL" at 30pt
-\font\entry="Charis SIL":color=0000FF at 12pt
-\font\xitemptentry="Charis SIL":color=0000FF at 30pt
-\font\xitemenentry="Charis SIL":color=0000FF at 20pt
+\font\xitemen="Charis SIL/GR" at 20pt
+\font\xitempt="Charis SIL/GR" at 30pt
+\font\entry="Charis SIL/GR":color=0000FF at 12pt
+\font\xitemptentry="Charis SIL/GR":color=0000FF at 30pt
+\font\xitemenentry="Charis SIL/GR":color=0000FF at 20pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
