--- a/src/Test/XeLatex/TestFiles/LinuxExpected/LineBreak.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/LineBreak.tex
@@ -19,19 +19,17 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\scrBookscrBody="Charis SIL" at 12pt
-\font\SectionHeadMinorscrBookscrBody="Charis SIL" at 12pt
-\font\spanbgtSectionHeadMinorscrBookscrBody="Charis SIL" at 12pt
+\font\scrBookscrBody="Charis SIL/GR" at 12pt
+\font\SectionHeadMinorscrBookscrBody="Charis SIL/GR" at 12pt
+\font\spanbgtSectionHeadMinorscrBookscrBody="Charis SIL/GR" at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
 \setcounter{page}{1} 
 \pagenumbering{arabic} 
 \pagestyle{fancy} 
-
-\section*{\needspace {8\baselineskip}\spanbgtSectionHeadMinorscrBookscrBody{A Jisas Na Vunaghigna \linebreak Na Sabat }}
+\section*{\needspace {8\baselineskip}
+\spanbgtSectionHeadMinorscrBookscrBody{A Jisas Na Vunaghigna \linebreak Na Sabat }}
 
 \end{document}
