--- a/src/Test/XeLatex/TestFiles/LinuxExpected/LineHeightNone.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/LineHeightNone.tex
@@ -20,10 +20,8 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\lineheightnone="Charis SIL" at 12pt
+\font\lineheightnone="Charis SIL/GR" at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
