--- a/src/Test/XeLatex/TestFiles/LinuxExpected/ListSmall.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/ListSmall.tex
@@ -19,15 +19,14 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\section="Charis SIL" at 12pt
-\font\olsection="Charis SIL" at 12pt
-\font\liolsection="Charis SIL" at 12pt
-\font\ulliolsection="Charis SIL" at 12pt
-\font\liulliolsection="Charis SIL" at 12pt
-\font\psection="Charis SIL" at 12pt
+\font\section="Charis SIL/GR" at 12pt
+\font\olsection="Charis SIL/GR" at 12pt
+\font\liolsection="Charis SIL/GR" at 12pt
+\font\ulliolsection="Charis SIL/GR" at 12pt
+\font\liulliolsection="Charis SIL/GR" at 12pt
+\font\psection="Charis SIL/GR" at 12pt
+\font\testsection="Charis SIL/GR" at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
@@ -79,7 +78,7 @@ sa
 sample para
 }
 
-\psection{
+\testsection{
 sample para
 }
 
