--- a/src/Test/XeLatex/TestFiles/LinuxExpected/NestedDivCase2.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/NestedDivCase2.tex
@@ -21,7 +21,7 @@
 \setlength{\parfillskip}{0pt plus 1fil}
 \font\ta="Charis SIL/GR":color=ff0000 at 20pt
 \font\tbta="Charis SIL/GR":color=0000ff at 20pt
-\font\tctbta="Charis SIL/GR":color=008000 at 13pt
+\font\tctbta="Arial/GR":color=008000 at 13pt
 \font\tdta="Charis SIL/GR":color=ffff00 at 20pt
 
 \mbox{} 
