--- a/src/Test/XeLatex/TestFiles/LinuxExpected/PaddingLeft.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/PaddingLeft.tex
@@ -19,18 +19,16 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\p="Charis SIL" at 12pt
-\font\ppaddingc="Charis SIL" at 12pt
-\font\ppaddingf="Charis SIL" at 12pt
-\font\ppaddingba="Charis SIL" at 12pt
-\font\ppaddingbc="Charis SIL" at 12pt
-\font\ppaddingbe="Charis SIL" at 12pt
-\font\ppaddingbg="Charis SIL" at 12pt
-\font\pnopadding="Charis SIL" at 12pt
-\font\ppadding="Charis SIL" at 12pt
+\font\p="Charis SIL/GR" at 12pt
+\font\paddingc="Charis SIL/GR" at 12pt
+\font\paddingf="Charis SIL/GR" at 12pt
+\font\paddingba="Charis SIL/GR" at 12pt
+\font\paddingbc="Charis SIL/GR" at 12pt
+\font\paddingbe="Charis SIL/GR" at 12pt
+\font\paddingbg="Charis SIL/GR" at 12pt
+\font\nopadding="Charis SIL/GR" at 12pt
+\font\padding="Charis SIL/GR" at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
@@ -40,20 +38,20 @@
 
 \p{This is a text with no left padding.}
 
-\ppaddingc{This text has a left padding of 2 pt.}
+\paddingc{This text has a left padding of 2 pt.}
 
-\ppaddingf{This text has a left padding of 5 pt.}
+\paddingf{This text has a left padding of 5 pt.}
 
-\ppaddingba{This text has a left padding of 10 pt.}
+\paddingba{This text has a left padding of 10 pt.}
 
-\ppaddingbc{This text has a left padding of 12 pt.}
+\paddingbc{This text has a left padding of 12 pt.}
 
-\ppaddingbe{This text has a left padding of 14 pt.}
+\paddingbe{This text has a left padding of 14 pt.}
 
-\ppaddingbg{This text has a left padding of 16 pt.}
+\paddingbg{This text has a left padding of 16 pt.}
 
-\pnopadding{This is a paragraph with no specified padding.}
+\nopadding{This is a paragraph with no specified padding.}
 
-\ppadding{This is a paragraph with specified paddings.}
+\padding{This is a paragraph with specified paddings.}
 
 \end{document}
