--- a/src/Test/XeLatex/TestFiles/LinuxExpected/PageBGColor.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/PageBGColor.tex
@@ -20,10 +20,8 @@
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
 \special{background cmyk 1 1 0 0}
-\font\t="Charis SIL" at 12pt
+\font\t="Charis SIL/GR" at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
