--- a/src/Test/XeLatex/TestFiles/LinuxExpected/Parent1.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/Parent1.tex
@@ -19,15 +19,13 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\xitemen="Charis SIL":color=ffa500 at 12pt
-\font\xitemmain="Charis SIL":color=ff0000 at 12pt
-\font\xitemenxitem="Charis SIL":color=008000 at 12pt
-\font\main="Charis SIL" at 12pt
-\font\xitemenmain="Charis SIL":color=008000 at 12pt
-\font\xitemxitemmain="Charis SIL":color=0000ff at 12pt
+\font\xitemen="Charis SIL/GR":color=ffa500 at 12pt
+\font\xitemmain="Charis SIL/GR":color=ff0000 at 12pt
+\font\xitemenxitem="Charis SIL/GR":color=008000 at 12pt
+\font\main="Charis SIL/GR" at 12pt
+\font\xitemenmain="Charis SIL/GR":color=008000 at 12pt
+\font\xitemmain="Charis SIL/GR":color=0000ff at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
@@ -39,7 +37,7 @@
 sample text file
 }
 
-\xitemxitemmain{
+\xitemmain{
 sample text file
 }
 
@@ -47,7 +45,7 @@ sample text file
 sample text file
 }
 
-\xitemxitemmain{
+\xitemmain{
 sample text file
 }
 
@@ -55,15 +53,15 @@ sample text file
 sample text file
 }
 
-\xitemxitemmain{
+\xitemmain{
 sample text file
 }
 
-\xitemxitemmain{
+\xitemmain{
 sample text file
 }
 
-\xitemxitemmain{
+\xitemmain{
 No Lang sample text file
 }
 
