--- a/src/Test/XeLatex/TestFiles/LinuxExpected/PrecedesPseudoLangTest.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/PrecedesPseudoLangTest.tex
@@ -19,29 +19,25 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\pronunciationenUKpronunciationbefore="Charis SIL" at 20pt
-\font\pronunciationenUSpronunciationbefore="Charis SIL" at 20pt
-\font\sectionletterdictionary="Charis SIL" at 10pt
-\font\headsectionletterdictionary="Charis SIL" at 10pt
-\font\articledictionary="Charis SIL" at 10pt
-\font\firstoftypeheadwordlastoftypearticledictionary="Charis SIL" at 10pt
-\font\firstoftypegrammarrequireslastoftypearticledictionary="Charis SIL" at 10pt
-\font\firstoftypelastoftyperelationsynonymarticledictionary="Charis SIL" at 10pt
-\font\firstoftypepronunciationenUKarticledictionary="Charis SIL" at 20pt
-\font\pronunciationenUKpronunciationbeforearticledictionary="Charis SIL" at 20pt
-\font\lastoftypepronunciationenUSarticledictionary="Charis SIL" at 20pt
-\font\pronunciationenUSpronunciationbeforearticledictionary="Charis SIL" at 20pt
-\font\lastoftypepronunciationenUKarticledictionary="Charis SIL" at 20pt
-\font\firstoftypegrammarcategorylastoftypearticledictionary="Charis SIL" at 10pt
-\font\definitionfirstoftypelastoftypearticledictionary="Charis SIL" at 10pt
-\font\firstoftypelastoftypenotearticledictionary="Charis SIL" at 10pt
-\font\exampleusefirstoftypearticledictionary="Charis SIL" at 10pt
-\font\examplefirstoftypearticledictionary="Charis SIL" at 10pt
-\font\exampleuselastoftypearticledictionary="Charis SIL" at 10pt
-\font\examplelastoftypearticledictionary="Charis SIL" at 10pt
+\font\pronunciationenUKpronunciationbefore="Charis SIL/GR" at 20pt
+\font\pronunciationenUSpronunciationbefore="Charis SIL/GR" at 20pt
+\font\sectionletterdictionary="Charis SIL/GR" at 10pt
+\font\headsectionletterdictionary="Charis SIL/GR" at 10pt
+\font\articledictionary="Charis SIL/GR" at 10pt
+\font\firstoftypeheadwordlastoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\firstoftypegrammarrequireslastoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\firstoftypelastoftyperelationsynonymarticledictionary="Charis SIL/GR" at 10pt
+\font\firstoftypepronunciationenUKarticledictionary="Charis SIL/GR" at 20pt
+\font\lastoftypepronunciationenUSarticledictionary="Charis SIL/GR" at 20pt
+\font\lastoftypepronunciationenUKarticledictionary="Charis SIL/GR" at 20pt
+\font\firstoftypegrammarcategorylastoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\definitionfirstoftypelastoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\firstoftypelastoftypenotearticledictionary="Charis SIL/GR" at 10pt
+\font\exampleusefirstoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\examplefirstoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\exampleuselastoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\examplelastoftypearticledictionary="Charis SIL/GR" at 10pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
@@ -51,7 +47,7 @@
 
 \headsectionletterdictionary{Ww}
 
-\firstoftypeheadwordlastoftypearticledictionary{want}\firstoftypegrammarrequireslastoftypearticledictionary{obj}\firstoftypelastoftyperelationsynonymarticledictionary{desire}\pronunciationenUKpronunciationbeforearticledictionary{ Hello}\firstoftypepronunciationenUKarticledictionary{wʌnt}\pronunciationenUSpronunciationbeforearticledictionary{ Hai}\lastoftypepronunciationenUSarticledictionary{wɑːnt}\pronunciationenUKpronunciationbeforearticledictionary{ Hello}\lastoftypepronunciationenUKarticledictionary{wɑːnt}\firstoftypegrammarcategorylastoftypearticledictionary{v}\definitionfirstoftypelastoftypearticledictionary{to desire a particular thing or plan of
+\firstoftypeheadwordlastoftypearticledictionary{want}\firstoftypegrammarrequireslastoftypearticledictionary{obj}\firstoftypelastoftyperelationsynonymarticledictionary{desire}\firstoftypepronunciationenUKarticledictionary{wʌnt}\lastoftypepronunciationenUSarticledictionary{ Hai}\lastoftypepronunciationenUSarticledictionary{wɑːnt}\lastoftypepronunciationenUKarticledictionary{ Hello}\lastoftypepronunciationenUKarticledictionary{wɑːnt}\firstoftypegrammarcategorylastoftypearticledictionary{v}\definitionfirstoftypelastoftypearticledictionary{to desire a particular thing or plan of
  action}\firstoftypelastoftypenotearticledictionary{Want is not used in polite requests in British
  English.}\exampleusefirstoftypearticledictionary{T}\examplefirstoftypearticledictionary{I want some chocolate.}\exampleuselastoftypearticledictionary{T}\examplelastoftypearticledictionary{She wants a word with you.}
 
