--- a/src/Test/XeLatex/TestFiles/LinuxExpected/PrecedesPseudoTest.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/PrecedesPseudoTest.tex
@@ -19,28 +19,24 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\pronunciationenUKpronunciationbefore="Charis SIL/I" at 20pt
-\font\sectionletterdictionary="Charis SIL" at 10pt
-\font\headsectionletterdictionary="Charis SIL" at 27pt
-\font\articledictionary="Charis SIL" at 10pt
-\font\firstoftypeheadwordlastoftypearticledictionary="Charis SIL" at 10pt
-\font\firstoftypegrammarrequireslastoftypearticledictionary="Charis SIL" at 10pt
-\font\firstoftypelastoftyperelationsynonymarticledictionary="Charis SIL" at 10pt
-\font\firstoftypepronunciationenUKarticledictionary="Charis SIL/I" at 20pt
-\font\pronunciationenUKpronunciationbeforearticledictionary="Charis SIL/I" at 20pt
-\font\lastoftypepronunciationenUSarticledictionary="Charis SIL/I" at 20pt
-\font\pronunciationpronunciationbeforearticledictionary="Charis SIL/I" at 20pt
-\font\lastoftypepronunciationenUKarticledictionary="Charis SIL/I" at 20pt
-\font\firstoftypegrammarcategorylastoftypearticledictionary="Charis SIL" at 10pt
-\font\definitionfirstoftypelastoftypearticledictionary="Charis SIL" at 10pt
-\font\firstoftypelastoftypenotearticledictionary="Charis SIL" at 10pt
-\font\exampleusefirstoftypearticledictionary="Charis SIL" at 10pt
-\font\examplefirstoftypearticledictionary="Charis SIL" at 10pt
-\font\exampleuselastoftypearticledictionary="Charis SIL" at 10pt
-\font\examplelastoftypearticledictionary="Charis SIL" at 10pt
+\font\pronunciationenUKpronunciationbefore="Charis SIL/GR/I" at 20pt
+\font\sectionletterdictionary="Charis SIL/GR" at 10pt
+\font\headsectionletterdictionary="Charis SIL/GR" at 27pt
+\font\articledictionary="Charis SIL/GR" at 10pt
+\font\firstoftypeheadwordlastoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\firstoftypegrammarrequireslastoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\firstoftypelastoftyperelationsynonymarticledictionary="Charis SIL/GR" at 10pt
+\font\firstoftypepronunciationenUKarticledictionary="Charis SIL/GR/I" at 20pt
+\font\lastoftypepronunciationenUSarticledictionary="Charis SIL/GR/I" at 20pt
+\font\lastoftypepronunciationenUKarticledictionary="Charis SIL/GR/I" at 20pt
+\font\firstoftypegrammarcategorylastoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\definitionfirstoftypelastoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\firstoftypelastoftypenotearticledictionary="Charis SIL/GR" at 10pt
+\font\exampleusefirstoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\examplefirstoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\exampleuselastoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\examplelastoftypearticledictionary="Charis SIL/GR" at 10pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
@@ -50,7 +46,7 @@
 \begin{center}
 \headsectionletterdictionary{Ww}\end{center}
 
-\firstoftypeheadwordlastoftypearticledictionary{want}\firstoftypegrammarrequireslastoftypearticledictionary{obj}\firstoftypelastoftyperelationsynonymarticledictionary{desire}\pronunciationenUKpronunciationbeforearticledictionary{UK }\firstoftypepronunciationenUKarticledictionary{wʌnt}\pronunciationpronunciationbeforearticledictionary{, }\lastoftypepronunciationenUSarticledictionary{wɑːnt}\pronunciationenUKpronunciationbeforearticledictionary{UK }\lastoftypepronunciationenUKarticledictionary{wɑːnt}\firstoftypegrammarcategorylastoftypearticledictionary{v}\definitionfirstoftypelastoftypearticledictionary{to desire a particular thing or plan of
+\firstoftypeheadwordlastoftypearticledictionary{want}\firstoftypegrammarrequireslastoftypearticledictionary{obj}\firstoftypelastoftyperelationsynonymarticledictionary{desire}\firstoftypepronunciationenUKarticledictionary{wʌnt}\lastoftypepronunciationenUSarticledictionary{, }\lastoftypepronunciationenUSarticledictionary{wɑːnt}\lastoftypepronunciationenUKarticledictionary{UK }\lastoftypepronunciationenUKarticledictionary{wɑːnt}\firstoftypegrammarcategorylastoftypearticledictionary{v}\definitionfirstoftypelastoftypearticledictionary{to desire a particular thing or plan of
  action}\firstoftypelastoftypenotearticledictionary{Want is not used in polite requests in British
  English.}\exampleusefirstoftypearticledictionary{T}\examplefirstoftypearticledictionary{I want some chocolate.}\exampleuselastoftypearticledictionary{T}\examplelastoftypearticledictionary{She wants a word with you.}
 
