--- a/src/Test/XeLatex/TestFiles/LinuxExpected/PseudoAfter.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/PseudoAfter.tex
@@ -19,15 +19,11 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\div="Charis SIL" at 12pt
-\font\letHeaddiv="Charis SIL" at 25pt
-\font\letHeadafterdiv="Charis SIL":color=ffa500 at 18pt
-\font\entryletHeaddiv="Charis SIL" at 25pt
-\font\letHeadbdiv="Charis SIL" at 12pt
-\font\letHeadbafterdiv="Charis SIL":color=ffa500 at 18pt
+\font\div="Charis SIL/GR" at 12pt
+\font\letHeaddiv="Charis SIL/GR":color=ffa500 at 18pt
+\font\entryletHeaddiv="Charis SIL/GR":color=ffa500 at 18pt
+\font\letHeadbdiv="Charis SIL/GR":color=ffa500 at 18pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
@@ -35,8 +31,8 @@
 \pagenumbering{arabic} 
 \pagestyle{fancy} 
 
-\letHeaddiv{A a}\entryletHeaddiv{entry}\letHeadafterdiv{***}
+\letHeaddiv{A a}\entryletHeaddiv{entry}\letHeaddiv{***}
 
-\letHeadbdiv{B b}\letHeadbafterdiv{♦ }
+\letHeadbdiv{B b}\letHeadbdiv{♦ }
 
 \end{document}
