--- a/src/Test/XeLatex/TestFiles/LinuxExpected/TextFontSizeTestC.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/TextFontSizeTestC.tex
@@ -19,13 +19,11 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letter="Charis SIL/BI" at 12pt
-\font\letterbletter="Charis SIL/I" at 18pt
-\font\lettercletter="Charis SIL/BI" at 6.6pt
-\font\salvationletter="Charis SIL/BI" at 12pt
+\font\letter="Charis SIL/GR/BI" at 12pt
+\font\letterbletter="Charis SIL/GR/I" at 18pt
+\font\lettercletter="Charis SIL/GR/BI" at 6.6pt
+\font\salvationletter="Charis SIL/GR/BI" at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
