--- a/src/Test/XeLatex/TestFiles/LinuxExpected/Underline.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/Underline.tex
@@ -19,10 +19,8 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\uc="Charis SIL" at 12pt
+\font\uc="Charis SIL/GR" at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
@@ -30,6 +28,6 @@
 \pagenumbering{arabic} 
 \pagestyle{fancy} 
 
-\underbar{\uc{Maybe some of the LaTeX folks here can suggest how this would be integrated properly with LaTeX environments and other parameters. But it may be enough to get you started, at least. }}
+\uc{\underline{Maybe some of the LaTeX folks here can suggest how this would be integrated properly with LaTeX environments and other parameters. But it may be enough to get you started, at least. }}
 
 \end{document}
