--- a/src/Test/XeLatex/TestFiles/LinuxExpected/WordSpace.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/WordSpace.tex
@@ -19,12 +19,10 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\ta="Charis SIL" at 12pt
-\font\tbta="Charis SIL" at 12pt
-\font\tctbta="Charis SIL":color=008000 at 12pt
+\font\ta="Charis SIL/GR" at 12pt
+\font\tbta="Charis SIL/GR" at 12pt
+\font\tctbta="Charis SIL/GR":color=008000 at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
