--- a/src/Test/XeLatex/TestFiles/LinuxExpected/ChapterNumber.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/ChapterNumber.tex
@@ -21,25 +21,23 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\divzxx="Charis SIL" at 12pt
-\font\spanzxx="Charis SIL" at 12pt
-\font\picturepictureRight="Charis SIL" at 12pt
-\font\imgpicturedivpictureLeft="Charis SIL" at 12pt
-\font\scrBookscrBody="Charis SIL" at 12pt
-\font\scrBookNamezxxscrBookscrBody="Charis SIL" at 12pt
-\font\scrBookCodezxxscrBookscrBody="Charis SIL" at 12pt
-\font\TitleMainscrBookscrBody="Charis SIL/B" at 18pt
-\font\spanzxxTitleMainscrBookscrBody="Charis SIL/B" at 18pt
-\font\TitleSecondaryzxxTitleMainscrBookscrBody="Charis SIL/BI" at 16pt
-\font\columnsscrBookscrBody="Charis SIL" at 12pt
-\font\scrSectioncolumnsscrBookscrBody="Charis SIL" at 12pt
-\font\ParagraphscrSectioncolumnsscrBookscrBody="Charis SIL" at 12pt
-\font\ChapterNumberzxxParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/B" at 12pt
-\font\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody="Charis SIL" at 6pt
-\font\spanzxxParagraphscrSectioncolumnsscrBookscrBody="Charis SIL" at 12pt
+\font\divzxx="Charis SIL/GR" at 12pt
+\font\spanzxx="Charis SIL/GR" at 12pt
+\font\picturepictureRight="Charis SIL/GR" at 12pt
+\font\imgpicturedivpictureLeft="Charis SIL/GR" at 12pt
+\font\scrBookscrBody="Charis SIL/GR" at 12pt
+\font\scrBookNamezxxscrBookscrBody="Charis SIL/GR" at 12pt
+\font\scrBookCodezxxscrBookscrBody="Charis SIL/GR" at 12pt
+\font\TitleMainscrBookscrBody="Charis SIL/GR/B" at 18pt
+\font\spanzxxTitleMainscrBookscrBody="Charis SIL/GR/B" at 18pt
+\font\TitleSecondaryzxxTitleMainscrBookscrBody="Charis SIL/GR/BI" at 16pt
+\font\columnsscrBookscrBody="Charis SIL/GR" at 12pt
+\font\scrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 12pt
+\font\ParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 12pt
+\font\ChapterNumberzxxParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR/B" at 12pt
+\font\VerseNumberzxxParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 6pt
+\font\spanzxxParagraphscrSectioncolumnsscrBookscrBody="Charis SIL/GR" at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
