--- a/src/Test/XeLatex/TestFiles/LinuxExpected/Counter2.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/Counter2.tex
@@ -19,27 +19,30 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\sectionletter="Charis SIL" at 12pt
-\font\articlesectionletter="Charis SIL/I" at 12pt
-\font\sensearticlesectionletter="Charis SIL/BI":color=0000ff at 12pt
-\font\sensebeforearticlesectionletter="Charis SIL/BI":color=ff0000 at 12pt
-\font\firstoftypegrammarcategorylastoftypesensearticlesectionletter="Charis SIL/BI":color=0000ff at 12pt
-\font\definitionfirstoftypelastoftypesensearticlesectionletter="Charis SIL/BI":color=0000ff at 12pt
-\font\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter="Charis SIL/BI":color=0000ff at 12pt
-\font\examplesensearticlesectionletter="Charis SIL/BI":color=0000ff at 12pt
-\font\firstoftypelastoftypesubentryarticlesectionletter="Charis SIL/I" at 12pt
-\font\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter="Charis SIL/I" at 12pt
-\font\examplefirstoftypelastoftypesubentryarticlesectionletter="Charis SIL/I" at 12pt
-\font\firstoftypeheadwordlastoftypearticlesectionletter="Charis SIL/I" at 12pt
-\font\firstoftypelastoftypepronunciationarticlesectionletter="Charis SIL/I" at 12pt
-\font\firstoftypelastoftypestressfirstoftypelastoftypepronunciationarticlesectionletter="Charis SIL/I" at 12pt
-\font\firstoftypevariantinflectionarticlesectionletter="Charis SIL/I" at 12pt
-\font\variantinflectionarticlesectionletter="Charis SIL/I" at 12pt
-\font\lastoftypevariantinflectionarticlesectionletter="Charis SIL/I" at 12pt
-\font\exampleusefirstoftypelastoftypesensearticlesectionletter="Charis SIL/BI":color=0000ff at 12pt
+\font\sectionletter="Charis SIL/GR" at 12pt
+\font\articlesectionletter="Charis SIL/GR/I" at 12pt
+\font\firstoftypesensearticlesectionletter="Charis SIL/GR/BI":color=ff0000 at 12pt
+\font\firstoftypegrammarcategorylastoftypefirstoftypesensearticlesectionletter="Charis SIL/GR/BI":color=ff0000 at 12pt
+\font\definitionfirstoftypelastoftypefirstoftypesensearticlesectionletter="Charis SIL/GR/BI":color=ff0000 at 12pt
+\font\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypefirstoftypesensearticlesectionletter="Charis SIL/GR/BI":color=ff0000 at 12pt
+\font\lastoftypesensearticlesectionletter="Charis SIL/GR/BI":color=ff0000 at 12pt
+\font\firstoftypegrammarcategorylastoftypelastoftypesensearticlesectionletter="Charis SIL/GR/BI":color=ff0000 at 12pt
+\font\definitionfirstoftypelastoftypelastoftypesensearticlesectionletter="Charis SIL/GR/BI":color=ff0000 at 12pt
+\font\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypelastoftypesensearticlesectionletter="Charis SIL/GR/BI":color=ff0000 at 12pt
+\font\examplefirstoftypelastoftypelastoftypesensearticlesectionletter="Charis SIL/GR/BI":color=ff0000 at 12pt
+\font\firstoftypelastoftypesubentryarticlesectionletter="Charis SIL/GR/I" at 12pt
+\font\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter="Charis SIL/GR/I" at 12pt
+\font\examplefirstoftypelastoftypefirstoftypelastoftypesubentryarticlesectionletter="Charis SIL/GR/I" at 12pt
+\font\firstoftypeheadwordlastoftypearticlesectionletter="Charis SIL/GR/I" at 12pt
+\font\firstoftypelastoftypepronunciationarticlesectionletter="Charis SIL/GR/I" at 12pt
+\font\firstoftypelastoftypestressfirstoftypelastoftypepronunciationarticlesectionletter="Charis SIL/GR/I" at 12pt
+\font\firstoftypevariantinflectionarticlesectionletter="Charis SIL/GR/I" at 12pt
+\font\variantinflectionarticlesectionletter="Charis SIL/GR/I" at 12pt
+\font\lastoftypevariantinflectionarticlesectionletter="Charis SIL/GR/I" at 12pt
+\font\exampleusefirstoftypelastoftypefirstoftypesensearticlesectionletter="Charis SIL/GR/BI":color=ff0000 at 12pt
+\font\examplefirstoftypelastoftypefirstoftypesensearticlesectionletter="Charis SIL/GR/BI":color=ff0000 at 12pt
+\font\exampleusefirstoftypelastoftypelastoftypesensearticlesectionletter="Charis SIL/GR/BI":color=ff0000 at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
@@ -47,6 +50,6 @@
 \pagenumbering{arabic} 
 \pagestyle{fancy} 
 
-\sensebeforearticlesectionletter{1.0.0}\sensearticlesectionletter{1 }\firstoftypegrammarcategorylastoftypesensearticlesectionletter{N-Count}\definitionfirstoftypelastoftypesensearticlesectionletter{A }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter{waitress}\definitionfirstoftypelastoftypesensearticlesectionletter{ is a woman who works in a restaurant, serving people with food and drink.}\sensebeforearticlesectionletter{1.0.0}\sensearticlesectionletter{2 }\firstoftypegrammarcategorylastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypesensearticlesectionletter{A woman who }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter{waitresses}\definitionfirstoftypelastoftypesensearticlesectionletter{ works in a restaurant serving food and drink.}\examplesensearticlesectionletter{She had been working in a pub, cooking and waitressing.}\firstoftypegrammarcategorylastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypesensearticlesectionletter{A woman who }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter{waitresses}\definitionfirstoftypelastoftypesensearticlesectionletter{ works in a restaurant serving food and drink.}\examplesensearticlesectionletter{She had been working in a pub, cooking and waitressing.}\firstoftypegrammarcategorylastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypesensearticlesectionletter{A woman who }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter{waitresses}\definitionfirstoftypelastoftypesensearticlesectionletter{ works in a restaurant serving food and drink.}\examplesensearticlesectionletter{She had been working in a pub, cooking and waitressing.}\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter{wait}\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter{ress}\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter{ing}\examplefirstoftypelastoftypesubentryarticlesectionletter{She does a bit of waitressing as a part-time job.}\section*{\needspace {8\baselineskip}{\firstoftypeheadwordlastoftypearticlesectionletter{waive}}}\section*{\needspace {8\baselineskip}{\firstoftypelastoftypepronunciationarticlesectionletter{w}}}\section*{\needspace {8\baselineskip}{\firstoftypelastoftypestressfirstoftypelastoftypepronunciationarticlesectionletter{eɪ}}}\section*{\needspace {8\baselineskip}{\firstoftypelastoftypepronunciationarticlesectionletter{v}}}\section*{\needspace {8\baselineskip}{\firstoftypevariantinflectionarticlesectionletter{waives}}}\section*{\needspace {8\baselineskip}{\variantinflectionarticlesectionletter{waiving}}}\section*{\needspace {8\baselineskip}{\lastoftypevariantinflectionarticlesectionletter{waived}}}\sensebeforearticlesectionletter{2.0.4}\sensearticlesectionletter{1 }\firstoftypegrammarcategorylastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypesensearticlesectionletter{If you }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter{waive}\definitionfirstoftypelastoftypesensearticlesectionletter{ your right to something, for example legal representation, you choose not to have it or do it.}\exampleusefirstoftypelastoftypesensearticlesectionletter{V n}\examplesensearticlesectionletter{He pleaded guilty to the murders of three boys and waived his right to appeal.}\sensebeforearticlesectionletter{2.0.5}\sensearticlesectionletter{2 }\firstoftypegrammarcategorylastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypesensearticlesectionletter{If someone }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter{waives}\definitionfirstoftypelastoftypesensearticlesectionletter{ a rule, they say that people do not have to obey it in a particular situation.}\exampleusefirstoftypelastoftypesensearticlesectionletter{V n}\examplesensearticlesectionletter{The art gallery waives admission charges on Sundays.}
+\firstoftypesensearticlesectionletter{1.0.0}\firstoftypesensearticlesectionletter{1 }\firstoftypegrammarcategorylastoftypefirstoftypesensearticlesectionletter{N-Count}\definitionfirstoftypelastoftypefirstoftypesensearticlesectionletter{A }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypefirstoftypesensearticlesectionletter{waitress}\definitionfirstoftypelastoftypefirstoftypesensearticlesectionletter{ is a woman who works in a restaurant, serving people with food and drink.}\lastoftypesensearticlesectionletter{1.0.0}\lastoftypesensearticlesectionletter{2 }\firstoftypegrammarcategorylastoftypelastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypelastoftypesensearticlesectionletter{A woman who }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypelastoftypesensearticlesectionletter{waitresses}\definitionfirstoftypelastoftypelastoftypesensearticlesectionletter{ works in a restaurant serving food and drink.}\examplefirstoftypelastoftypelastoftypesensearticlesectionletter{She had been working in a pub, cooking and waitressing.}\firstoftypegrammarcategorylastoftypelastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypelastoftypesensearticlesectionletter{A woman who }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypelastoftypesensearticlesectionletter{waitresses}\definitionfirstoftypelastoftypelastoftypesensearticlesectionletter{ works in a restaurant serving food and drink.}\examplefirstoftypelastoftypelastoftypesensearticlesectionletter{She had been working in a pub, cooking and waitressing.}\firstoftypegrammarcategorylastoftypelastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypelastoftypesensearticlesectionletter{A woman who }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypelastoftypesensearticlesectionletter{waitresses}\definitionfirstoftypelastoftypelastoftypesensearticlesectionletter{ works in a restaurant serving food and drink.}\examplefirstoftypelastoftypelastoftypesensearticlesectionletter{She had been working in a pub, cooking and waitressing.}\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter{wait}\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter{ress}\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter{ing}\examplefirstoftypelastoftypefirstoftypelastoftypesubentryarticlesectionletter{She does a bit of waitressing as a part-time job.}\firstoftypeheadwordlastoftypearticlesectionletter{waive}\firstoftypelastoftypepronunciationarticlesectionletter{w}\firstoftypelastoftypestressfirstoftypelastoftypepronunciationarticlesectionletter{eɪ}\firstoftypelastoftypepronunciationarticlesectionletter{v}\firstoftypevariantinflectionarticlesectionletter{waives}\section*{\needspace {8\baselineskip}{\variantinflectionarticlesectionletter{waiving}}}\section*{\needspace {8\baselineskip}{\lastoftypevariantinflectionarticlesectionletter{waived}}}\firstoftypesensearticlesectionletter{2.0.4}\firstoftypesensearticlesectionletter{1 }\firstoftypegrammarcategorylastoftypefirstoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypefirstoftypesensearticlesectionletter{If you }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypefirstoftypesensearticlesectionletter{waive}\definitionfirstoftypelastoftypefirstoftypesensearticlesectionletter{ your right to something, for example legal representation, you choose not to have it or do it.}\exampleusefirstoftypelastoftypefirstoftypesensearticlesectionletter{V n}\examplefirstoftypelastoftypefirstoftypesensearticlesectionletter{He pleaded guilty to the murders of three boys and waived his right to appeal.}\lastoftypesensearticlesectionletter{2.0.5}\lastoftypesensearticlesectionletter{2 }\firstoftypegrammarcategorylastoftypelastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypelastoftypesensearticlesectionletter{If someone }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypelastoftypesensearticlesectionletter{waives}\definitionfirstoftypelastoftypelastoftypesensearticlesectionletter{ a rule, they say that people do not have to obey it in a particular situation.}\exampleusefirstoftypelastoftypelastoftypesensearticlesectionletter{V n}\examplefirstoftypelastoftypelastoftypesensearticlesectionletter{The art gallery waives admission charges on Sundays.}
 
 \end{document}
