--- a/src/Test/XeLatex/TestFiles/LinuxExpected/DisplayBlock.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/DisplayBlock.tex
@@ -19,12 +19,10 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\t="Charis SIL" at 14pt
-\font\xt="Charis SIL" at 14pt
-\font\vxt="Charis SIL" at 14pt
+\font\t="Charis SIL/GR" at 14pt
+\font\xt="Charis SIL/GR" at 14pt
+\font\vxt="Charis SIL/GR" at 14pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
