--- a/src/Test/XeLatex/TestFiles/LinuxExpected/DoubleUnderlineTest.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/DoubleUnderlineTest.tex
@@ -20,17 +20,17 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\scrBookscrBody="Cambria" at 12pt
-\font\scrBookNamezxxscrBookscrBody="Cambria" at 12pt
-\font\scrBookCodezxxscrBookscrBody="Cambria" at 12pt
-\font\TitleMainscrBookscrBody="Cambria" at 12pt
-\font\TitleSecondaryzxxTitleMainscrBookscrBody="Cambria" at 12pt
-\font\spanzxxTitleMainscrBookscrBody="Cambria" at 12pt
-\font\scrIntroSectionscrBookscrBody="Cambria" at 12pt
-\font\IntroSectionHeadscrIntroSectionscrBookscrBody="Cambria" at 11pt
-\font\spanzxxIntroSectionHeadscrIntroSectionscrBookscrBody="Cambria" at 11pt
-\font\IntroParagraphscrIntroSectionscrBookscrBody="Cambria" at 12pt
-\font\doubleUnderlineIntroParagraphscrIntroSectionscrBookscrBody="Cambria" at 12pt
+\font\scrBookscrBody="Charis SIL/GR" at 12pt
+\font\scrBookNamezxxscrBookscrBody="Charis SIL/GR" at 12pt
+\font\scrBookCodezxxscrBookscrBody="Charis SIL/GR" at 12pt
+\font\TitleMainscrBookscrBody="Charis SIL/GR" at 12pt
+\font\TitleSecondaryzxxTitleMainscrBookscrBody="Charis SIL/GR" at 12pt
+\font\spanzxxTitleMainscrBookscrBody="Charis SIL/GR" at 12pt
+\font\scrIntroSectionscrBookscrBody="Charis SIL/GR" at 12pt
+\font\IntroSectionHeadscrIntroSectionscrBookscrBody="Charis SIL/GR" at 11pt
+\font\spanzxxIntroSectionHeadscrIntroSectionscrBookscrBody="Charis SIL/GR" at 11pt
+\font\IntroParagraphscrIntroSectionscrBookscrBody="Charis SIL/GR" at 12pt
+\font\doubleUnderlineIntroParagraphscrIntroSectionscrBookscrBody="Charis SIL/GR" at 12pt
 
 \mbox{} 
 \newpage 
