--- a/src/Test/XeLatex/TestFiles/LinuxExpected/FontFamily2.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/FontFamily2.tex
@@ -19,7 +19,7 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\a="Charis SIL/GR":color=0000ff at 16pt
+\font\a="Verdana/GR":color=0000ff at 16pt
 
 \mbox{} 
 \newpage 
