--- a/src/Test/XeLatex/TestFiles/LinuxExpected/FontFamily4a.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/FontFamily4a.tex
@@ -20,8 +20,8 @@
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
 \font\ta="Charis SIL/GR":color=ff0000 at 20pt
-\font\tbta="Charis SIL/GR":color=0000ff at 16pt
-\font\tctbta="Charis SIL/GR":color=008000 at 32pt
+\font\tbta="Arial/GR":color=0000ff at 16pt
+\font\tctbta="Times New Roman/GR":color=008000 at 32pt
 
 \mbox{} 
 \newpage 
