--- a/src/Test/XeLatex/TestFiles/LinuxExpected/FontSizeXXSmall.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/FontSizeXXSmall.tex
@@ -19,11 +19,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letter="Charis SIL" at 6.6pt
-\font\lettercmletter="Charis SIL" at 6.6pt
+\font\letter="Times New Roman/GR" at 6.6pt
+\font\lettercmletter="Times New Roman/GR" at 6.6pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
