--- a/src/Test/XeLatex/TestFiles/LinuxExpected/FontStyleItalic.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/FontStyleItalic.tex
@@ -19,10 +19,8 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letter="Charis SIL/I" at 24pt
+\font\letter="Times New Roman/GR/I" at 24pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
