--- a/src/Test/XeLatex/TestFiles/LinuxExpected/FontWeightNormal.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/FontWeightNormal.tex
@@ -19,12 +19,10 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\normal="Charis SIL" at 12pt
-\font\boldnormal="Charis SIL/B" at 24pt
-\font\normalboldnormal="Charis SIL" at 12pt
+\font\normal="Times New Roman/GR" at 12pt
+\font\boldnormal="Times New Roman/GR/B" at 24pt
+\font\normalboldnormal="Times New Roman/GR" at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
