--- a/src/Test/XeLatex/TestFiles/LinuxExpected/HangingIndent.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/HangingIndent.tex
@@ -22,99 +22,92 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\xitemte="Charis SIL" at 10pt
-\font\xitemhi="Charis SIL" at 10pt
-\font\xitemxitemcomplexformformbefore="Charis SIL/B":color=000000 at 9pt
-\font\xitemxitemcomplexformrefsbefore="Charis SIL" at 12pt
-\font\xitemxitemdefinitionbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitementryrefcomponentbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitementryreftypebefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemexamplebefore="Charis SIL/I":color=000000 at 8pt
-\font\xitemxitemexamplesbefore="Charis SIL" at 12pt
-\font\xitemxitemheadwordbefore="Charis SIL/B":color=000000 at 8pt
-\font\xitemxitemLexEntrypublishStemComponentTargetHeadWordRefbefore="Charis SIL/B" at 9pt
-\font\xitemxitemLexEntryTypepublishStemComplexFormTypeReverseAbbrPubbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemLexEntryTypepublishStemEntryTypeAbbreviationPubbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemLexSensepublishStemGlossPubLdbefore="Charis SIL" at 10pt
-\font\xitemxitemLexSensepublishStemGlossPubLebefore="Charis SIL" at 10pt
-\font\xitemxitempartofspeechbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitempictureLabelbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemprimaryrefsbefore="Charis SIL" at 12pt
-\font\xitemxitempronunciationbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitempronunciationsbefore="Charis SIL" at 12pt
-\font\sensesensesensesbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemtranslationbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemtranslationLdbefore="Charis SIL" at 10pt
-\font\xitemxitemcrossrefbefore="Charis SIL/B":color=000000 at 9pt
-\font\xitemxitemcrossreftargetsbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemcrossreftypebefore="Charis SIL/BI":color=000000 at 9pt
-\font\xitemxitemheadwordminorbefore="Charis SIL/B":color=000000 at 8pt
-\font\xitemxitemmainentryrefbefore="Charis SIL/B":color=000000 at 9pt
-\font\xitemxitemmainentryrefminorbefore="Charis SIL/B":color=000000 at 9pt
-\font\xitemxitempronunciationminorbefore="Charis SIL":color=000000 at 9pt
-\font\xitemxitemsensecrossrefbefore="Charis SIL/B":color=000000 at 9pt
-\font\xitemxitemsensemainentryrefbefore="Charis SIL/B":color=000000 at 9pt
-\font\xitemxitemheadwordsubbefore="Charis SIL/B":color=000000 at 8pt
-\font\xitemxitemLexEntrypublishRootMinorPrimaryTargetMLHeadWordPubbefore="Charis SIL/B":color=000000 at 8pt
-\font\xitemxitemLexEntrypublishStemMinorPrimaryTargetMLHeadWordPubbefore="Charis SIL/B":color=000000 at 8pt
-\font\xitemtpi="Charis SIL" at 12pt
-\font\letHeaddicBody="Charis SIL/B":color=000000 at 14pt
-\font\letterletHeaddicBody="Charis SIL/B":color=000000 at 14pt
-\font\letDatadicBody="Charis SIL" at 9pt
-\font\entryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\headwordggoTeluINentryletDatadicBody="Charis SIL/B":color=000000 at 8pt
-\font\headwordafterentryletDatadicBody="Charis SIL/B":color=000000 at 8pt
-\font\spanenheadwordggoTeluINentryletDatadicBody="Charis SIL/B":color=000000 at 9pt
-\font\spanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\pronunciationggofonipaxemicspanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\spanenpronunciationggofonipaxemicspanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\spanggofonipaxemicpronunciationggofonipaxemicspanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\spanenspanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\sensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\grammaticalinfosensespanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\grammaticalinfoaftersensespanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\partofspeechengrammaticalinfosensespanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\spanenpartofspeechengrammaticalinfosensespanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\spanengrammaticalinfosensespanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\definitionensensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\spanendefinitionensensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\LexSensepublishStemGlossPubLdtesensespanentryletDatadicBody="Charis SIL":color=000000 at 10pt
-\font\spanteLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\spanenLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\grammaticalinfospanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\grammaticalinfoafterspanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\partofspeechengrammaticalinfospanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\spanenpartofspeechengrammaticalinfospanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\spanengrammaticalinfospanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\xsensenumbersensespanentryletDatadicBody="Charis SIL/B":color=000000 at 8pt
-\font\xsensenumberaftersensespanentryletDatadicBody="Charis SIL/B":color=000000 at 8pt
-\font\xitemteLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody="Charis SIL":color=000000 at 10pt
-\font\spantexitemteLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\xitemhiLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody="Charis SIL":color=000000 at 10pt
-\font\spanhixitemhiLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\spansensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\spanspansensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\exampleggoTeluINspanspansensespanentryletDatadicBody="Charis SIL/I":color=000000 at 8pt
-\font\examplebeforespanspansensespanentryletDatadicBody="Charis SIL/I":color=000000 at 8pt
-\font\exampleafterspanspansensespanentryletDatadicBody="Charis SIL/I":color=000000 at 8pt
-\font\spanggoTeluINexampleggoTeluINspanspansensespanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\spanenexampleggoTeluINspanspansensespanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\spanspanspansensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\translationLdtespanspanspansensespanentryletDatadicBody="Charis SIL":color=000000 at 10pt
-\font\spantetranslationLdtespanspanspansensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\spanentranslationLdtespanspanspansensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\spanenspansensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\exampleggoTeluINspansensespanentryletDatadicBody="Charis SIL/I":color=000000 at 8pt
-\font\examplebeforespansensespanentryletDatadicBody="Charis SIL/I":color=000000 at 8pt
-\font\exampleafterspansensespanentryletDatadicBody="Charis SIL/I":color=000000 at 8pt
-\font\spanggoTeluINexampleggoTeluINspansensespanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\spanenexampleggoTeluINspansensespanentryletDatadicBody="Charis SIL/I":color=000000 at 9pt
-\font\translationLdtespanspansensespanentryletDatadicBody="Charis SIL":color=000000 at 10pt
-\font\spantetranslationLdtespanspansensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
-\font\spanentranslationLdtespanspansensespanentryletDatadicBody="Charis SIL":color=000000 at 9pt
+\font\xitemte="Times New Roman/GR" at 10pt
+\font\xitemhi="Times New Roman/GR" at 10pt
+\font\xitemxitemcomplexformformbefore="Charis SIL/GR/B":color=000000 at 9pt
+\font\xitemxitemcomplexformrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemdefinitionbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitementryrefcomponentbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitementryreftypebefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemexamplebefore="Charis SIL/GR/I":color=000000 at 8pt
+\font\xitemxitemexamplesbefore="Times New Roman/GR" at 12pt
+\font\xitemxitemheadwordbefore="Charis SIL/GR/B":color=000000 at 8pt
+\font\xitemxitemLexEntrypublishStemComponentTargetHeadWordRefbefore="Times New Roman/GR/B" at 9pt
+\font\xitemxitemLexEntryTypepublishStemComplexFormTypeReverseAbbrPubbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemLexEntryTypepublishStemEntryTypeAbbreviationPubbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemLexSensepublishStemGlossPubLdbefore="Times New Roman/GR" at 10pt
+\font\xitemxitemLexSensepublishStemGlossPubLebefore="Times New Roman/GR" at 10pt
+\font\xitemxitempartofspeechbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitempictureLabelbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemprimaryrefsbefore="Times New Roman/GR" at 12pt
+\font\xitemxitempronunciationbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitempronunciationsbefore="Times New Roman/GR" at 12pt
+\font\sensesensesensesbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemtranslationbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemtranslationLdbefore="Times New Roman/GR" at 10pt
+\font\xitemxitemcrossrefbefore="Charis SIL/GR/B":color=000000 at 9pt
+\font\xitemxitemcrossreftargetsbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemcrossreftypebefore="Charis SIL/GR/BI":color=000000 at 9pt
+\font\xitemxitemheadwordminorbefore="Charis SIL/GR/B":color=000000 at 8pt
+\font\xitemxitemmainentryrefbefore="Charis SIL/GR/B":color=000000 at 9pt
+\font\xitemxitemmainentryrefminorbefore="Charis SIL/GR/B":color=000000 at 9pt
+\font\xitemxitempronunciationminorbefore="Charis SIL/GR":color=000000 at 9pt
+\font\xitemxitemsensecrossrefbefore="Charis SIL/GR/B":color=000000 at 9pt
+\font\xitemxitemsensemainentryrefbefore="Charis SIL/GR/B":color=000000 at 9pt
+\font\xitemxitemheadwordsubbefore="Charis SIL/GR/B":color=000000 at 8pt
+\font\xitemxitemLexEntrypublishRootMinorPrimaryTargetMLHeadWordPubbefore="Charis SIL/GR/B":color=000000 at 8pt
+\font\xitemxitemLexEntrypublishStemMinorPrimaryTargetMLHeadWordPubbefore="Charis SIL/GR/B":color=000000 at 8pt
+\font\xitemtpi="Times New Roman/GR" at 12pt
+\font\letHeaddicBody="Charis SIL/GR/B":color=000000 at 14pt
+\font\letterletHeaddicBody="Charis SIL/GR/B":color=000000 at 14pt
+\font\letDatadicBody="Times New Roman/GR" at 9pt
+\font\entryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\headwordggoTeluINentryletDatadicBody="Charis SIL/GR/B":color=000000 at 8pt
+\font\spanenheadwordggoTeluINentryletDatadicBody="Times New Roman/GR/B":color=000000 at 9pt
+\font\pronunciationsentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\pronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\spanenpronunciationsentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\sensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\sensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\grammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR/I":color=000000 at 9pt
+\font\partofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
+\font\spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
+\font\spanengrammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
+\font\definitionensensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\spanendefinitionensensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\LexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 10pt
+\font\spanteLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\spanenLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\spanensensesentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\grammaticalinfosensesentryletDatadicBody="Charis SIL/GR/I":color=000000 at 9pt
+\font\partofspeechengrammaticalinfosensesentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
+\font\spanenpartofspeechengrammaticalinfosensesentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
+\font\spanengrammaticalinfosensesentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
+\font\boldxsensenumbersensesensesentryletDatadicBody="Times New Roman/GR/B":color=000000 at 8pt
+\font\xitemteLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 10pt
+\font\spantexitemteLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\xitemhiLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 10pt
+\font\spanhixitemhiLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\examplessensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\xitemexamplessensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\exampleggoTeluINxitemexamplessensesensesentryletDatadicBody="Charis SIL/GR/I":color=000000 at 8pt
+\font\spanggoTeluINexampleggoTeluINxitemexamplessensesensesentryletDatadicBody="Charis SIL/GR/I":color=000000 at 9pt
+\font\spanenexampleggoTeluINxitemexamplessensesensesentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
+\font\translationsxitemexamplessensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\translationLdtetranslationsxitemexamplessensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 10pt
+\font\spantetranslationLdtetranslationsxitemexamplessensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\spanentranslationLdtetranslationsxitemexamplessensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\spanenexamplessensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
+\font\exampleggoTeluINexamplessensesensesentryletDatadicBody="Charis SIL/GR/I":color=000000 at 8pt
+\font\spanggoTeluINexampleggoTeluINexamplessensesensesentryletDatadicBody="Charis SIL/GR/I":color=000000 at 9pt
+\font\spanenexampleggoTeluINexamplessensesensesentryletDatadicBody="Times New Roman/GR/I":color=000000 at 9pt
+\font\translationsexamplessensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\translationLdtetranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 10pt
+\font\spantetranslationLdtetranslationsexamplessensesensesentryletDatadicBody="Charis SIL/GR":color=000000 at 9pt
+\font\spanentranslationLdtetranslationsexamplessensesensesentryletDatadicBody="Times New Roman/GR":color=000000 at 9pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
@@ -124,38 +117,38 @@
 \begin{spacing}{0.916666666666667}\begin{center}\begin{center}\widowpenalty=300
 \clubpenalty=300
 
-\section*{\needspace {8\baselineskip}{\topskip 18pt{\letterletHeaddicBody{అ}}}}\end{center}
+\section*{\needspace {8\baselineskip}{\topskip 18pt{\letterletHeaddicBody{\underline{అ}}}}}\end{center}
 \end{center}\end{spacing}\setlength{\columnsep}{12pt} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}\begin{spacing}{0.458333333333333}{\raggedright} \begin{spacing}{0.458333333333333}
 \hangindent= 12pt
 \hangafter=1
-\markboth{ \headwordggoTeluINentryletDatadicBody అకుర్పొక్ (మహ్న)}{ \headwordggoTeluINentryletDatadicBody అకుర్పొక్ (మహ్న)}\headwordggoTeluINentryletDatadicBody{అకుర్పొక్ (మహ్న)} \headwordafterentryletDatadicBody{}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicspanentryletDatadicBody{akurpok (mahna)}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{]} \spanenpartofspeechengrammaticalinfosensespanentryletDatadicBody{n} \grammaticalinfoaftersensespanentryletDatadicBody{}\spanendefinitionensensespanentryletDatadicBody{month 6 of the Gond year (August-September).} \spanteLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody{భాద్రపదం} \end{spacing}
+\markboth{ \headwordggoTeluINentryletDatadicBody అకుర్పొక్ (మహ్న)}{ \headwordggoTeluINentryletDatadicBody అకుర్పొక్ (మహ్న)}\headwordggoTeluINentryletDatadicBody{అకుర్పొక్ (మహ్న)} \headwordggoTeluINentryletDatadicBody{}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{akurpok (mahna)}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{]} \spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody{n} \grammaticalinfosensesensesentryletDatadicBody{}\spanendefinitionensensesensesentryletDatadicBody{month 6 of the Gond year (August-September).} \spanteLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody{భాద్రపదం} \end{spacing}
 \begin{spacing}{0.458333333333333}
 \hangindent= 12pt
 \hangafter=1
-\markboth{ \headwordggoTeluINentryletDatadicBody అక్కల్}{ \headwordggoTeluINentryletDatadicBody అక్కల్}\headwordggoTeluINentryletDatadicBody{అక్కల్} \headwordafterentryletDatadicBody{}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicspanentryletDatadicBody{akkal}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{]} \spanenpartofspeechengrammaticalinfospanentryletDatadicBody{n} \grammaticalinfoafterspanentryletDatadicBody{}\xsensenumbersensespanentryletDatadicBody{1}\xsensenumberaftersensespanentryletDatadicBody{) }\spanteLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody{బుద్ధి} \xsensenumbersensespanentryletDatadicBody{2}\xsensenumberaftersensespanentryletDatadicBody{) }\spanendefinitionensensespanentryletDatadicBody{wisdom.} \spantexitemteLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody{తెలివి} \spanhixitemhiLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody{बुद्धि} \examplebeforespanspansensespanentryletDatadicBody{}\spanggoTeluINexampleggoTeluINspanspansensespanentryletDatadicBody{అక్కల్ మన్వల్ మాయ్నల్ చొకొట్ మందంతొర్.} \exampleafterspanspansensespanentryletDatadicBody{}\spantetranslationLdtespanspanspansensespanentryletDatadicBody{బుద్ధి గల వ్యక్తి మంచిగా ఉంటాడు.} \examplebeforespanspansensespanentryletDatadicBody{}\spanggoTeluINexampleggoTeluINspanspansensespanentryletDatadicBody{బయ్యె బాబలిర్ కాండిన్ అక్కల్ బుద్ది కరుసన.} \exampleafterspanspansensespanentryletDatadicBody{}\spantetranslationLdtespanspanspansensespanentryletDatadicBody{తండ్రి తల్లి కొడుకులను తెలివి తేటలు నేర్పాలి.} \end{spacing}
+\markboth{ \headwordggoTeluINentryletDatadicBody అక్కల్}{ \headwordggoTeluINentryletDatadicBody అక్కల్}\headwordggoTeluINentryletDatadicBody{అక్కల్} \headwordggoTeluINentryletDatadicBody{}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{akkal}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{]} \spanenpartofspeechengrammaticalinfosensesentryletDatadicBody{n} \grammaticalinfosensesentryletDatadicBody{}\boldxsensenumbersensesensesentryletDatadicBody{1}\boldxsensenumbersensesensesentryletDatadicBody{) }\spanteLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody{బుద్ధి} \boldxsensenumbersensesensesentryletDatadicBody{2}\boldxsensenumbersensesensesentryletDatadicBody{) }\spanendefinitionensensesensesentryletDatadicBody{wisdom.} \spantexitemteLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody{తెలివి} \spanhixitemhiLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody{बुद्धि} \exampleggoTeluINxitemexamplessensesensesentryletDatadicBody{}\spanggoTeluINexampleggoTeluINxitemexamplessensesensesentryletDatadicBody{అక్కల్ మన్వల్ మాయ్నల్ చొకొట్ మందంతొర్.} \exampleggoTeluINxitemexamplessensesensesentryletDatadicBody{}\spantetranslationLdtetranslationsxitemexamplessensesensesentryletDatadicBody{బుద్ధి గల వ్యక్తి మంచిగా ఉంటాడు.} \exampleggoTeluINxitemexamplessensesensesentryletDatadicBody{}\spanggoTeluINexampleggoTeluINxitemexamplessensesensesentryletDatadicBody{బయ్యె బాబలిర్ కాండిన్ అక్కల్ బుద్ది కరుసన.} \exampleggoTeluINxitemexamplessensesensesentryletDatadicBody{}\spantetranslationLdtetranslationsxitemexamplessensesensesentryletDatadicBody{తండ్రి తల్లి కొడుకులను తెలివి తేటలు నేర్పాలి.} \end{spacing}
 \begin{spacing}{0.458333333333333}
 \hangindent= 12pt
 \hangafter=1
-\markboth{ \headwordggoTeluINentryletDatadicBody అడ్డమ్}{ \headwordggoTeluINentryletDatadicBody అడ్డమ్}\headwordggoTeluINentryletDatadicBody{అడ్డమ్} \headwordafterentryletDatadicBody{}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicspanentryletDatadicBody{aḍḍam}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{]} \spanenpartofspeechengrammaticalinfosensespanentryletDatadicBody{adv} \grammaticalinfoaftersensespanentryletDatadicBody{}\spanendefinitionensensespanentryletDatadicBody{across.} \spantexitemteLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody{అడ్డముగా} \spanhixitemhiLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody{आडा} \examplebeforespansensespanentryletDatadicBody{}\spanggoTeluINexampleggoTeluINspansensespanentryletDatadicBody{పోడ్దున్ అడ్డమ్ టెప్ప ఆత.} \exampleafterspansensespanentryletDatadicBody{}\spantetranslationLdtespanspansensespanentryletDatadicBody{సూర్యునికి అడ్డముగా మేఘం వచ్చింది.} \end{spacing}
+\markboth{ \headwordggoTeluINentryletDatadicBody అడ్డమ్}{ \headwordggoTeluINentryletDatadicBody అడ్డమ్}\headwordggoTeluINentryletDatadicBody{అడ్డమ్} \headwordggoTeluINentryletDatadicBody{}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{aḍḍam}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{]} \spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody{adv} \grammaticalinfosensesensesentryletDatadicBody{}\spanendefinitionensensesensesentryletDatadicBody{across.} \spantexitemteLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody{అడ్డముగా} \spanhixitemhiLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody{आडा} \exampleggoTeluINexamplessensesensesentryletDatadicBody{}\spanggoTeluINexampleggoTeluINexamplessensesensesentryletDatadicBody{పోడ్దున్ అడ్డమ్ టెప్ప ఆత.} \exampleggoTeluINexamplessensesensesentryletDatadicBody{}\spantetranslationLdtetranslationsexamplessensesensesentryletDatadicBody{సూర్యునికి అడ్డముగా మేఘం వచ్చింది.} \end{spacing}
 \begin{spacing}{0.458333333333333}
 \hangindent= 12pt
 \hangafter=1
-\markboth{ \headwordggoTeluINentryletDatadicBody అడ్డమ్ ఆ}{ \headwordggoTeluINentryletDatadicBody అడ్డమ్ ఆ}\headwordggoTeluINentryletDatadicBody{అడ్డమ్ ఆ} \headwordafterentryletDatadicBody{}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicspanentryletDatadicBody{aḍḍam ā-}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{]} \spanenpartofspeechengrammaticalinfospanentryletDatadicBody{v} \grammaticalinfoafterspanentryletDatadicBody{}\xsensenumbersensespanentryletDatadicBody{1}\xsensenumberaftersensespanentryletDatadicBody{) }\spanendefinitionensensespanentryletDatadicBody{object} \spantexitemteLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody{అడ్డుకో} \spanhixitemhiLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody{रोक; बीच में पड} \examplebeforespansensespanentryletDatadicBody{}\spanggoTeluINexampleggoTeluINspansensespanentryletDatadicBody{బాబల్ బయ్యెన్ పానెకె కాండి అడ్డమ్ ఆతొర్.} \exampleafterspansensespanentryletDatadicBody{}\spantetranslationLdtespanspansensespanentryletDatadicBody{నాన అమ్మను కొట్టే టప్పుడు కొడుకు అడ్డుకున్నాడు.} \xsensenumbersensespanentryletDatadicBody{2}\xsensenumberaftersensespanentryletDatadicBody{) }\spanendefinitionensensespanentryletDatadicBody{obstruct} \spantexitemteLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody{అడ్డగించు} \spanhixitemhiLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody{रोक; मना कर} \examplebeforespansensespanentryletDatadicBody{}\spanggoTeluINexampleggoTeluINspansensespanentryletDatadicBody{నిమ్మె దర్బర్‌తె అడ్డమ్ అస్సి వడ్క్‌మా.} \exampleafterspansensespanentryletDatadicBody{}\spantetranslationLdtespanspansensespanentryletDatadicBody{నువ్వు కూర్చోవడం కన్నా అడ్డంగా మాట్లాడకు.} \end{spacing}
+\markboth{ \headwordggoTeluINentryletDatadicBody అడ్డమ్ ఆ}{ \headwordggoTeluINentryletDatadicBody అడ్డమ్ ఆ}\headwordggoTeluINentryletDatadicBody{అడ్డమ్ ఆ} \headwordggoTeluINentryletDatadicBody{}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{aḍḍam ā-}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{]} \spanenpartofspeechengrammaticalinfosensesentryletDatadicBody{v} \grammaticalinfosensesentryletDatadicBody{}\boldxsensenumbersensesensesentryletDatadicBody{1}\boldxsensenumbersensesensesentryletDatadicBody{) }\spanendefinitionensensesensesentryletDatadicBody{object} \spantexitemteLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody{అడ్డుకో} \spanhixitemhiLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody{रोक; बीच में पड} \exampleggoTeluINexamplessensesensesentryletDatadicBody{}\spanggoTeluINexampleggoTeluINexamplessensesensesentryletDatadicBody{బాబల్ బయ్యెన్ పానెకె కాండి అడ్డమ్ ఆతొర్.} \exampleggoTeluINexamplessensesensesentryletDatadicBody{}\spantetranslationLdtetranslationsexamplessensesensesentryletDatadicBody{నాన అమ్మను కొట్టే టప్పుడు కొడుకు అడ్డుకున్నాడు.} \boldxsensenumbersensesensesentryletDatadicBody{2}\boldxsensenumbersensesensesentryletDatadicBody{) }\spanendefinitionensensesensesentryletDatadicBody{obstruct} \spantexitemteLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody{అడ్డగించు} \spanhixitemhiLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody{रोक; मना कर} \exampleggoTeluINexamplessensesensesentryletDatadicBody{}\spanggoTeluINexampleggoTeluINexamplessensesensesentryletDatadicBody{నిమ్మె దర్బర్‌తె అడ్డమ్ అస్సి వడ్క్‌మా.} \exampleggoTeluINexamplessensesensesentryletDatadicBody{}\spantetranslationLdtetranslationsexamplessensesensesentryletDatadicBody{నువ్వు కూర్చోవడం కన్నా అడ్డంగా మాట్లాడకు.} \end{spacing}
 \begin{spacing}{0.458333333333333}
 \hangindent= 12pt
 \hangafter=1
-\markboth{ \headwordggoTeluINentryletDatadicBody అడ్డంవడి}{ \headwordggoTeluINentryletDatadicBody అడ్డంవడి}\headwordggoTeluINentryletDatadicBody{అడ్డంవడి} \headwordafterentryletDatadicBody{}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicspanentryletDatadicBody{aḍḍanvaḍi}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{]} \spanendefinitionensensespanentryletDatadicBody{air coming across} \spanteLexSensepublishStemGlossPubLdtesensespanentryletDatadicBody{అడ్డంగా వచ్చే గాలి} \examplebeforespansensespanentryletDatadicBody{}\spanggoTeluINexampleggoTeluINspansensespanentryletDatadicBody{నిన్నెతల్ అడ్డంవడి వాసెర్ మంత.} \exampleafterspansensespanentryletDatadicBody{}\spantetranslationLdtespanspansensespanentryletDatadicBody{నిన్నటి నుండి అడ్డంగా గాలి వస్తుంది.} \end{spacing}
+\markboth{ \headwordggoTeluINentryletDatadicBody అడ్డంవడి}{ \headwordggoTeluINentryletDatadicBody అడ్డంవడి}\headwordggoTeluINentryletDatadicBody{అడ్డంవడి} \headwordggoTeluINentryletDatadicBody{}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{aḍḍanvaḍi}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{]} \spanendefinitionensensesensesentryletDatadicBody{air coming across} \spanteLexSensepublishStemGlossPubLdtesensesensesentryletDatadicBody{అడ్డంగా వచ్చే గాలి} \exampleggoTeluINexamplessensesensesentryletDatadicBody{}\spanggoTeluINexampleggoTeluINexamplessensesensesentryletDatadicBody{నిన్నెతల్ అడ్డంవడి వాసెర్ మంత.} \exampleggoTeluINexamplessensesensesentryletDatadicBody{}\spantetranslationLdtetranslationsexamplessensesensesentryletDatadicBody{నిన్నటి నుండి అడ్డంగా గాలి వస్తుంది.} \end{spacing}
  \end{spacing}\end{multicols}\begin{spacing}{0.916666666666667}\begin{center}\begin{center}\widowpenalty=300
 \clubpenalty=300
 
-\section*{\needspace {8\baselineskip}{\topskip 18pt{\letterletHeaddicBody{ొ}}}}\end{center}
+\section*{\needspace {8\baselineskip}{\topskip 18pt{\letterletHeaddicBody{\underline{ొ}}}}}\end{center}
 \end{center}\end{spacing}\setlength{\columnsep}{12pt} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}\begin{spacing}{0.458333333333333}{\raggedright} \begin{spacing}{0.458333333333333}
 \hangindent= 12pt
 \hangafter=1
-\markboth{ \headwordggoTeluINentryletDatadicBody -ొర్}{ \headwordggoTeluINentryletDatadicBody -ొర్}\headwordggoTeluINentryletDatadicBody{-ొర్} \headwordafterentryletDatadicBody{}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicspanentryletDatadicBody{or}\spanenpronunciationggofonipaxemicspanentryletDatadicBody{]} \spanenpartofspeechengrammaticalinfosensespanentryletDatadicBody{vs} \grammaticalinfoaftersensespanentryletDatadicBody{}\spanendefinitionensensespanentryletDatadicBody{3.M.SG} \end{spacing}
+\markboth{ \headwordggoTeluINentryletDatadicBody -ొర్}{ \headwordggoTeluINentryletDatadicBody -ొర్}\headwordggoTeluINentryletDatadicBody{-ొర్} \headwordggoTeluINentryletDatadicBody{}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{[}\spanggofonipaxemicpronunciationggofonipaxemicpronunciationsentryletDatadicBody{or}\spanenpronunciationggofonipaxemicpronunciationsentryletDatadicBody{]} \spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody{vs} \grammaticalinfosensesensesentryletDatadicBody{}\spanendefinitionensensesensesentryletDatadicBody{3.M.SG} \end{spacing}
  \end{spacing}\end{multicols}
 \end{document}
