--- a/src/Test/XeLatex/TestFiles/LinuxExpected/LineHeight.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/LineHeight.tex
@@ -20,19 +20,17 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\scrBookscrBody="Charis SIL" at 12pt
-\font\TitleMainscrBookscrBody="Charis SIL/B" at 18pt
-\font\TitleSecondarynkoTitleMainscrBookscrBody="Charis SIL/B" at 14pt
-\font\spannkoTitleMainscrBookscrBody="Charis SIL/B" at 18pt
-\font\TitleMainNonescrBookscrBody="Charis SIL/B" at 20pt
-\font\TitleSecondarynkoTitleMainNonescrBookscrBody="Charis SIL/B" at 14pt
-\font\spannkoTitleMainNonescrBookscrBody="Charis SIL/B" at 20pt
-\font\TitleMainNormalscrBookscrBody="Charis SIL/B" at 20pt
-\font\TitleSecondarynkoTitleMainNormalscrBookscrBody="Charis SIL/B" at 14pt
-\font\spannkoTitleMainNormalscrBookscrBody="Charis SIL/B" at 20pt
+\font\scrBookscrBody="Charis SIL/GR" at 12pt
+\font\TitleMainscrBookscrBody="Charis SIL/GR/B" at 18pt
+\font\TitleSecondarynkoTitleMainscrBookscrBody="Charis SIL/GR/B" at 14pt
+\font\spannkoTitleMainscrBookscrBody="Charis SIL/GR/B" at 18pt
+\font\TitleMainNonescrBookscrBody="Charis SIL/GR/B" at 20pt
+\font\TitleSecondarynkoTitleMainNonescrBookscrBody="Charis SIL/GR/B" at 14pt
+\font\spannkoTitleMainNonescrBookscrBody="Charis SIL/GR/B" at 20pt
+\font\TitleMainNormalscrBookscrBody="Charis SIL/GR/B" at 20pt
+\font\TitleSecondarynkoTitleMainNormalscrBookscrBody="Charis SIL/GR/B" at 14pt
+\font\spannkoTitleMainNormalscrBookscrBody="Charis SIL/GR/B" at 20pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
