--- a/src/Test/XeLatex/TestFiles/LinuxExpected/NestedDivCase3.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/NestedDivCase3.tex
@@ -20,8 +20,8 @@
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
 \font\ta="Charis SIL/GR":color=ff0000 at 20pt
-\font\tcta="Charis SIL/GR":color=008000 at 13pt
-\font\tdtcta="Charis SIL/GR":color=ffff00 at 13pt
+\font\tcta="Arial/GR":color=008000 at 13pt
+\font\tdtcta="Arial/GR":color=ffff00 at 13pt
 
 \mbox{} 
 \newpage 
