--- a/src/Test/XeLatex/TestFiles/LinuxExpected/PrecedesPseudoTestB.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/PrecedesPseudoTestB.tex
@@ -19,33 +19,28 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\pronunciationenUSpronunciationarticlebefore="Charis SIL/I":color=008000 at 20pt
-\font\pronunciationenUKpronunciationenUSbefore="Charis SIL/I":color=0000ff at 20pt
-\font\pronunciationenUSfirstoftypebefore="Charis SIL" at 12pt
-\font\pronunciationenUSpronunciationbefore="Charis SIL/I":color=008000 at 20pt
-\font\pronunciationenUSbefore="Charis SIL" at 12pt
-\font\sectionletterdictionary="Charis SIL" at 10pt
-\font\headsectionletterdictionary="Charis SIL" at 10pt
-\font\articledictionary="Charis SIL" at 10pt
-\font\firstoftypeheadwordlastoftypearticledictionary="Charis SIL" at 10pt
-\font\firstoftypegrammarrequireslastoftypearticledictionary="Charis SIL" at 10pt
-\font\firstoftypelastoftyperelationsynonymarticledictionary="Charis SIL" at 10pt
-\font\firstoftypepronunciationenUKarticledictionary="Charis SIL/I":color=008000 at 20pt
-\font\pronunciationfirstoftypebeforearticledictionary="Charis SIL/I":color=008000 at 20pt
-\font\firstoftypepronunciationenUSarticledictionary="Charis SIL/I":color=008000 at 20pt
-\font\pronunciationenUSfirstoftypebeforearticledictionary="Charis SIL/I":color=008000 at 20pt
-\font\lastoftypepronunciationenUKarticledictionary="Charis SIL/I":color=008000 at 20pt
-\font\pronunciationenUKpronunciationenUSbeforearticledictionary="Charis SIL/I":color=0000ff at 20pt
-\font\firstoftypegrammarcategorylastoftypearticledictionary="Charis SIL" at 10pt
-\font\definitionfirstoftypelastoftypearticledictionary="Charis SIL" at 10pt
-\font\firstoftypelastoftypenotearticledictionary="Charis SIL" at 10pt
-\font\exampleusefirstoftypearticledictionary="Charis SIL" at 10pt
-\font\examplefirstoftypearticledictionary="Charis SIL" at 10pt
-\font\exampleuselastoftypearticledictionary="Charis SIL" at 10pt
-\font\examplelastoftypearticledictionary="Charis SIL" at 10pt
+\font\pronunciationenUSpronunciationarticlebefore="Charis SIL/GR/I":color=008000 at 20pt
+\font\pronunciationenUKpronunciationenUSbefore="Charis SIL/GR/I":color=0000ff at 20pt
+\font\pronunciationenUSfirstoftypebefore="Charis SIL/GR" at 12pt
+\font\pronunciationenUSpronunciationbefore="Charis SIL/GR/I":color=008000 at 20pt
+\font\pronunciationenUSbefore="Charis SIL/GR" at 12pt
+\font\sectionletterdictionary="Charis SIL/GR" at 10pt
+\font\headsectionletterdictionary="Charis SIL/GR" at 10pt
+\font\articledictionary="Charis SIL/GR" at 10pt
+\font\firstoftypeheadwordlastoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\firstoftypegrammarrequireslastoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\firstoftypelastoftyperelationsynonymarticledictionary="Charis SIL/GR" at 10pt
+\font\firstoftypepronunciationenUKarticledictionary="Charis SIL/GR/I":color=008000 at 20pt
+\font\firstoftypepronunciationenUSarticledictionary="Charis SIL/GR/I":color=008000 at 20pt
+\font\lastoftypepronunciationenUKarticledictionary="Charis SIL/GR/I":color=0000ff at 20pt
+\font\firstoftypegrammarcategorylastoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\definitionfirstoftypelastoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\firstoftypelastoftypenotearticledictionary="Charis SIL/GR" at 10pt
+\font\exampleusefirstoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\examplefirstoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\exampleuselastoftypearticledictionary="Charis SIL/GR" at 10pt
+\font\examplelastoftypearticledictionary="Charis SIL/GR" at 10pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
@@ -55,7 +50,7 @@
 
 \headsectionletterdictionary{Ww}
 
-\firstoftypeheadwordlastoftypearticledictionary{want}\firstoftypegrammarrequireslastoftypearticledictionary{obj}\firstoftypelastoftyperelationsynonymarticledictionary{desire}\pronunciationfirstoftypebeforearticledictionary{4 }\firstoftypepronunciationenUKarticledictionary{wʌnt}\pronunciationenUSfirstoftypebeforearticledictionary{2 }\firstoftypepronunciationenUSarticledictionary{wɑːnt}\pronunciationenUKpronunciationenUSbeforearticledictionary{ LangUS_UK}\lastoftypepronunciationenUKarticledictionary{wɑːnt}\firstoftypegrammarcategorylastoftypearticledictionary{v}\definitionfirstoftypelastoftypearticledictionary{to desire a particular thing or plan of
+\firstoftypeheadwordlastoftypearticledictionary{want}\firstoftypegrammarrequireslastoftypearticledictionary{obj}\firstoftypelastoftyperelationsynonymarticledictionary{desire}\firstoftypepronunciationenUKarticledictionary{4 }\firstoftypepronunciationenUKarticledictionary{wʌnt}\firstoftypepronunciationenUSarticledictionary{2 }\firstoftypepronunciationenUSarticledictionary{wɑːnt}\lastoftypepronunciationenUKarticledictionary{ LangUS_UK}\lastoftypepronunciationenUKarticledictionary{wɑːnt}\firstoftypegrammarcategorylastoftypearticledictionary{v}\definitionfirstoftypelastoftypearticledictionary{to desire a particular thing or plan of
  action}\firstoftypelastoftypenotearticledictionary{Want is not used in polite requests in British
  English.}\exampleusefirstoftypearticledictionary{T}\examplefirstoftypearticledictionary{I want some chocolate.}\exampleuselastoftypearticledictionary{T}\examplelastoftypearticledictionary{She wants a word with you.}
 
