--- a/src/Test/XeLatex/TestFiles/LinuxExpected/ReplaceString.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/ReplaceString.tex
@@ -20,24 +20,22 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\scrBookscrBody="Charis SIL" at 12pt
-\font\LinebscrBookscrBody="Charis SIL" at 10pt
-\font\spanbgtLinebscrBookscrBody="Charis SIL" at 10pt
-\font\VerseNumberbgtLinebscrBookscrBody="Charis SIL" at 10pt
-\font\ParagraphContinuationscrBookscrBody="Charis SIL" at 10pt
-\font\spanbgtParagraphContinuationscrBookscrBody="Charis SIL" at 10pt
-\font\scrSectionscrBody="Charis SIL" at 12pt
-\font\ParagraphContinuationscrSectionscrBody="Charis SIL" at 10pt
-\font\VerseNumberbgtParagraphContinuationscrSectionscrBody="Charis SIL" at 10pt
-\font\spanbgtParagraphContinuationscrSectionscrBody="Charis SIL" at 10pt
-\font\LinebscrSectionscrBody="Charis SIL" at 10pt
-\font\spanbgtLinebscrSectionscrBody="Charis SIL" at 10pt
-\font\spanLinebscrSectionscrBody="Charis SIL" at 10pt
-\font\NoteCrossHYPHENReferenceParagraphLinebscrSectionscrBody="Charis SIL" at 8pt
-\font\spanbgtNoteCrossHYPHENReferenceParagraphLinebscrSectionscrBody="Charis SIL" at 8pt
+\font\scrBookscrBody="Charis SIL/GR" at 12pt
+\font\LinebscrBookscrBody="Charis SIL/GR" at 10pt
+\font\spanbgtLinebscrBookscrBody="Charis SIL/GR" at 10pt
+\font\VerseNumberbgtLinebscrBookscrBody="Times New Roman/GR" at 10pt
+\font\ParagraphContinuationscrBookscrBody="Charis SIL/GR" at 10pt
+\font\spanbgtParagraphContinuationscrBookscrBody="Charis SIL/GR" at 10pt
+\font\scrSectionscrBody="Charis SIL/GR" at 12pt
+\font\ParagraphContinuationscrSectionscrBody="Charis SIL/GR" at 10pt
+\font\VerseNumberbgtParagraphContinuationscrSectionscrBody="Times New Roman/GR" at 10pt
+\font\spanbgtParagraphContinuationscrSectionscrBody="Charis SIL/GR" at 10pt
+\font\LinebscrSectionscrBody="Charis SIL/GR" at 10pt
+\font\spanbgtLinebscrSectionscrBody="Charis SIL/GR" at 10pt
+\font\scrFootnoteMarkerLinebscrSectionscrBody="Charis SIL/GR" at 10pt
+\font\NoteCrossHYPHENReferenceParagraphLinebscrSectionscrBody="Charis SIL/GR" at 8pt
+\font\spanbgtNoteCrossHYPHENReferenceParagraphLinebscrSectionscrBody="Charis SIL/GR" at 8pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
