--- a/src/Test/XeLatex/TestFiles/LinuxExpected/TextAlign.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/TextAlign.tex
@@ -19,12 +19,10 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\a="Charis SIL" at 12pt
-\font\b="Charis SIL" at 12pt
-\font\c="Charis SIL" at 12pt
+\font\a="Charis SIL/GR" at 12pt
+\font\b="Charis SIL/GR" at 12pt
+\font\c="Charis SIL/GR" at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
