--- a/src/Test/XeLatex/TestFiles/LinuxExpected/TextAlignJustify.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/TextAlignJustify.tex
@@ -19,10 +19,8 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\justify="Charis SIL" at 12pt
+\font\justify="Charis SIL/GR" at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
