--- a/src/Test/XeLatex/TestFiles/LinuxExpected/UnicodeSymbol.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/UnicodeSymbol.tex
@@ -19,36 +19,33 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letHeaddicBody="Charis SIL" at 12pt
-\font\letterletHeaddicBody="Charis SIL" at 12pt
-\font\letDatadicBody="Charis SIL" at 12pt
-\font\entryletDatadicBody="Charis SIL" at 12pt
-\font\headwordsehentryletDatadicBody="Charis SIL" at 12pt
-\font\xhomographnumberptheadwordsehentryletDatadicBody="Charis SIL" at 12pt
-\font\sensesentryletDatadicBody="Charis SIL" at 12pt
-\font\sensesensesentryletDatadicBody="Charis SIL" at 12pt
-\font\xsensenumberLcensensesensesentryletDatadicBody="Charis SIL" at 12pt
-\font\grammaticalinfosensesensesentryletDatadicBody="Charis SIL" at 12pt
-\font\partofspeechptgrammaticalinfosensesensesentryletDatadicBody="Charis SIL" at 12pt
-\font\slotsgrammaticalinfosensesensesentryletDatadicBody="Charis SIL" at 12pt
-\font\xitemslotsgrammaticalinfosensesensesentryletDatadicBody="Charis SIL" at 12pt
-\font\slotnameptxitemslotsgrammaticalinfosensesensesentryletDatadicBody="Charis SIL" at 12pt
-\font\definitionLbptsensesensesentryletDatadicBody="Charis SIL" at 12pt
-\font\xitemptdefinitionLbptsensesensesentryletDatadicBody="Charis SIL" at 12pt
-\font\xlanguagetagenxitemptdefinitionLbptsensesensesentryletDatadicBody="Charis SIL" at 12pt
-\font\xitemendefinitionLbptsensesensesentryletDatadicBody="Charis SIL" at 12pt
-\font\xlanguagetagenxitemendefinitionLbptsensesensesentryletDatadicBody="Charis SIL" at 12pt
-\font\slotnameptslotsgrammaticalinfosensesensesentryletDatadicBody="Charis SIL" at 12pt
-\font\relationantonymptsensesensesentryletDatadicBody="Charis SIL" at 12pt
-\font\relationantonymbeforesensesensesentryletDatadicBody="Charis SIL" at 12pt
-\font\xitemptrelationantonymptsensesensesentryletDatadicBody="Charis SIL" at 12pt
-\font\xlanguagetagenxitemptrelationantonymptsensesensesentryletDatadicBody="Charis SIL" at 12pt
-\font\xitemenrelationantonymptsensesensesentryletDatadicBody="Charis SIL" at 12pt
-\font\xlanguagetagenxitemenrelationantonymptsensesensesentryletDatadicBody="Charis SIL" at 12pt
-\font\xsensenumberLbensensesensesentryletDatadicBody="Charis SIL" at 12pt
+\font\letHeaddicBody="Charis SIL/GR" at 12pt
+\font\letterletHeaddicBody="Charis SIL/GR" at 12pt
+\font\letDatadicBody="Charis SIL/GR" at 12pt
+\font\entryletDatadicBody="Charis SIL/GR" at 12pt
+\font\headwordsehentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\xhomographnumberptheadwordsehentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\sensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\sensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\xsensenumberLcensensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\grammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\partofspeechptgrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\slotsgrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\xitemslotsgrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\slotnameptxitemslotsgrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\definitionLbptsensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\xitemptdefinitionLbptsensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\xlanguagetagenxitemptdefinitionLbptsensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\xitemendefinitionLbptsensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\xlanguagetagenxitemendefinitionLbptsensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\slotnameptslotsgrammaticalinfosensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\relationantonymptsensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\xitemptrelationantonymptsensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\xlanguagetagenxitemptrelationantonymptsensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\xitemenrelationantonymptsensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\xlanguagetagenxitemenrelationantonymptsensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
+\font\xsensenumberLbensensesensesentryletDatadicBody="Charis SIL/GR" at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
@@ -58,6 +55,6 @@
 
 \letterletHeaddicBody{A a}
 
-\markboth{ \headwordsehentryletDatadicBody a-}{ \headwordsehentryletDatadicBody a-}\headwordsehentryletDatadicBody{a-}\xhomographnumberptheadwordsehentryletDatadicBody{1}\xsensenumberLcensensesensesentryletDatadicBody{1) }\partofspeechptgrammaticalinfosensesensesentryletDatadicBody{V}\slotnameptxitemslotsgrammaticalinfosensesensesentryletDatadicBody{sbj}\slotnameptxitemslotsgrammaticalinfosensesensesentryletDatadicBody{obj}\xlanguagetagenxitemptdefinitionLbptsensesensesentryletDatadicBody{Por }\xitemptdefinitionLbptsensesensesentryletDatadicBody{ele}\xlanguagetagenxitemendefinitionLbptsensesensesentryletDatadicBody{Eng }\xitemendefinitionLbptsensesensesentryletDatadicBody{he}\xsensenumberLcensensesensesentryletDatadicBody{2) }\partofspeechptgrammaticalinfosensesensesentryletDatadicBody{Poss}\slotnameptslotsgrammaticalinfosensesensesentryletDatadicBody{possncl}\xlanguagetagenxitemptdefinitionLbptsensesensesentryletDatadicBody{Por }\xitemptdefinitionLbptsensesensesentryletDatadicBody{6}\xlanguagetagenxitemendefinitionLbptsensesensesentryletDatadicBody{Eng }\xitemendefinitionLbptsensesensesentryletDatadicBody{6}\relationantonymbeforesensesensesentryletDatadicBody{$\neq$ }\xlanguagetagenxitemptrelationantonymptsensesensesentryletDatadicBody{Por }\xitemptrelationantonymptsensesensesentryletDatadicBody{6}\xlanguagetagenxitemenrelationantonymptsensesensesentryletDatadicBody{Eng }\xitemenrelationantonymptsensesensesentryletDatadicBody{shared}\xsensenumberLbensensesensesentryletDatadicBody{3) }\partofspeechptgrammaticalinfosensesensesentryletDatadicBody{Assoc}\slotnameptslotsgrammaticalinfosensesensesentryletDatadicBody{assocncl}\xlanguagetagenxitemptdefinitionLbptsensesensesentryletDatadicBody{Por }\xitemptdefinitionLbptsensesensesentryletDatadicBody{6}\xlanguagetagenxitemendefinitionLbptsensesensesentryletDatadicBody{Eng }\xitemendefinitionLbptsensesensesentryletDatadicBody{clearly an important sense of what this verb means.}\xsensenumberLbensensesensesentryletDatadicBody{4) }\partofspeechptgrammaticalinfosensesensesentryletDatadicBody{Adj}\slotnameptslotsgrammaticalinfosensesensesentryletDatadicBody{adjncl}\xlanguagetagenxitemptdefinitionLbptsensesensesentryletDatadicBody{Por }\xitemptdefinitionLbptsensesensesentryletDatadicBody{6}\xlanguagetagenxitemendefinitionLbptsensesensesentryletDatadicBody{Eng }\xitemendefinitionLbptsensesensesentryletDatadicBody{6}
+\markboth{ \headwordsehentryletDatadicBody a-}{ \headwordsehentryletDatadicBody a-}\headwordsehentryletDatadicBody{a-}\xhomographnumberptheadwordsehentryletDatadicBody{1}\xsensenumberLcensensesensesentryletDatadicBody{1) }\partofspeechptgrammaticalinfosensesensesentryletDatadicBody{V}\slotnameptxitemslotsgrammaticalinfosensesensesentryletDatadicBody{sbj}\slotnameptxitemslotsgrammaticalinfosensesensesentryletDatadicBody{obj}\xlanguagetagenxitemptdefinitionLbptsensesensesentryletDatadicBody{Por }\xitemptdefinitionLbptsensesensesentryletDatadicBody{ele}\xlanguagetagenxitemendefinitionLbptsensesensesentryletDatadicBody{Eng }\xitemendefinitionLbptsensesensesentryletDatadicBody{he}\xsensenumberLcensensesensesentryletDatadicBody{2) }\partofspeechptgrammaticalinfosensesensesentryletDatadicBody{Poss}\slotnameptslotsgrammaticalinfosensesensesentryletDatadicBody{possncl}\xlanguagetagenxitemptdefinitionLbptsensesensesentryletDatadicBody{Por }\xitemptdefinitionLbptsensesensesentryletDatadicBody{6}\xlanguagetagenxitemendefinitionLbptsensesensesentryletDatadicBody{Eng }\xitemendefinitionLbptsensesensesentryletDatadicBody{6}\relationantonymptsensesensesentryletDatadicBody{$\neq$ }\xlanguagetagenxitemptrelationantonymptsensesensesentryletDatadicBody{Por }\xitemptrelationantonymptsensesensesentryletDatadicBody{6}\xlanguagetagenxitemenrelationantonymptsensesensesentryletDatadicBody{Eng }\xitemenrelationantonymptsensesensesentryletDatadicBody{shared}\xsensenumberLbensensesensesentryletDatadicBody{3) }\partofspeechptgrammaticalinfosensesensesentryletDatadicBody{Assoc}\slotnameptslotsgrammaticalinfosensesensesentryletDatadicBody{assocncl}\xlanguagetagenxitemptdefinitionLbptsensesensesentryletDatadicBody{Por }\xitemptdefinitionLbptsensesensesentryletDatadicBody{6}\xlanguagetagenxitemendefinitionLbptsensesensesentryletDatadicBody{Eng }\xitemendefinitionLbptsensesensesentryletDatadicBody{clearly an important sense of what this verb means.}\xsensenumberLbensensesensesentryletDatadicBody{4) }\partofspeechptgrammaticalinfosensesensesentryletDatadicBody{Adj}\slotnameptslotsgrammaticalinfosensesensesentryletDatadicBody{adjncl}\xlanguagetagenxitemptdefinitionLbptsensesensesentryletDatadicBody{Por }\xitemptdefinitionLbptsensesensesentryletDatadicBody{6}\xlanguagetagenxitemendefinitionLbptsensesensesentryletDatadicBody{Eng }\xitemendefinitionLbptsensesensesentryletDatadicBody{6}
 
 \end{document}
