--- a/src/Test/XeLatex/TestFiles/LinuxExpected/multiClass.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/multiClass.tex
@@ -19,14 +19,14 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\main="Charis SIL" at 12pt
-\font\abcmain="Charis SIL":color=ffa500 at 24pt
-\font\amain="Charis SIL":color=0000ff at 18pt
-\font\bmain="Charis SIL":color=ff0000 at 12pt
-\font\abenmain="Charis SIL":color=0000ff at 18pt
-\font\acmain="Charis SIL":color=ffa500 at 18pt
-\newpage 
-\thispagestyle{empty} 
+\font\main="Charis SIL/GR" at 12pt
+\font\abcmain="Charis SIL/GR":color=ffa500 at 24pt
+\font\amain="Charis SIL/GR":color=0000ff at 18pt
+\font\bmain="Charis SIL/GR":color=ff0000 at 12pt
+\font\abenmain="Charis SIL/GR":color=0000ff at 18pt
+\font\abmain="Charis SIL/GR":color=0000ff at 18pt
+\font\acmain="Charis SIL/GR":color=ffa500 at 18pt
+
 \mbox{} 
 \newpage 
 \newpage 
@@ -50,7 +50,7 @@ sample text file b
 sample text file a b
 }
 
-\amain{
+\abmain{
 sample text file b a
 }
 
