--- a/src/Test/XeLatex/TestFiles/LinuxExpected/visibility.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/visibility.tex
@@ -20,13 +20,11 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letHeaddicBody="Charis SIL" at 12pt
-\font\cletHeaddicBody="Charis SIL" at 12pt
-\font\aletHeaddicBody="Charis SIL":color=ff0000 at 12pt
-\font\bletHeaddicBody="Charis SIL" at 12pt
+\font\letHeaddicBody="Charis SIL/GR" at 12pt
+\font\cletHeaddicBody="Charis SIL/GR" at 12pt
+\font\aletHeaddicBody="Charis SIL/GR":color=ff0000 at 12pt
+\font\bletHeaddicBody="Charis SIL/GR" at 12pt
 
-\newpage 
-\thispagestyle{empty} 
 \mbox{} 
 \newpage 
 \newpage 
